@@ -8,16 +8,12 @@
 
 package org.sosy_lab.cpachecker.cpa.location;
 
-import static org.sosy_lab.cpachecker.util.CFAUtils.allEnteringEdges;
-import static org.sosy_lab.cpachecker.util.CFAUtils.allLeavingEdges;
-import static org.sosy_lab.cpachecker.util.CFAUtils.enteringEdges;
-import static org.sosy_lab.cpachecker.util.CFAUtils.leavingEdges;
-
 import com.google.common.base.Ascii;
 import com.google.common.base.Splitter;
 import java.io.IOException;
 import java.io.InvalidObjectException;
 import java.io.ObjectInputStream;
+import java.io.Serial;
 import java.io.Serializable;
 import java.util.List;
 import org.sosy_lab.cpachecker.cfa.ast.FileLocation;
@@ -31,14 +27,13 @@ import org.sosy_lab.cpachecker.core.interfaces.AbstractQueryableState;
 import org.sosy_lab.cpachecker.core.interfaces.AbstractStateWithLocation;
 import org.sosy_lab.cpachecker.core.interfaces.Partitionable;
 import org.sosy_lab.cpachecker.exceptions.InvalidQueryException;
-import org.sosy_lab.cpachecker.util.CFAUtils;
 import org.sosy_lab.cpachecker.util.globalinfo.CFAInfo;
 import org.sosy_lab.cpachecker.util.globalinfo.SerializationInfoStorage;
 
 public class LocationState
     implements AbstractStateWithLocation, AbstractQueryableState, Partitionable, Serializable {
 
-  private static final long serialVersionUID = -801176497691618779L;
+  @Serial private static final long serialVersionUID = -801176497691618779L;
 
   private static boolean isNoFunctionCall(CFAEdge e) {
     return !(e instanceof FunctionCallEdge || e instanceof FunctionReturnEdge);
@@ -46,7 +41,7 @@ public class LocationState
 
   static class BackwardsLocationState extends LocationState {
 
-    private static final long serialVersionUID = 6825257572921009531L;
+    @Serial private static final long serialVersionUID = 6825257572921009531L;
 
     BackwardsLocationState(CFANode locationNode, boolean pFollowFunctionCalls) {
       super(locationNode, pFollowFunctionCalls);
@@ -79,20 +74,20 @@ public class LocationState
   @Override
   public Iterable<CFAEdge> getOutgoingEdges() {
     if (followFunctionCalls) {
-      return leavingEdges(locationNode);
+      return locationNode.getLeavingEdges();
 
     } else {
-      return allLeavingEdges(locationNode).filter(LocationState::isNoFunctionCall);
+      return locationNode.getAllLeavingEdges().filter(LocationState::isNoFunctionCall);
     }
   }
 
   @Override
   public Iterable<CFAEdge> getIncomingEdges() {
     if (followFunctionCalls) {
-      return enteringEdges(locationNode);
+      return locationNode.getEnteringEdges();
 
     } else {
-      return allEnteringEdges(locationNode).filter(LocationState::isNoFunctionCall);
+      return locationNode.getAllEnteringEdges().filter(LocationState::isNoFunctionCall);
     }
   }
 
@@ -111,11 +106,11 @@ public class LocationState
               + pProperty
               + "\" is invalid. Could not split the property string correctly.");
     } else {
-      switch (Ascii.toLowerCase(parts.get(0))) {
-        case "line":
+      switch (Ascii.toLowerCase(parts.getFirst())) {
+        case "line" -> {
           try {
             int queryLine = Integer.parseInt(parts.get(1));
-            for (CFAEdge edge : CFAUtils.enteringEdges(locationNode)) {
+            for (CFAEdge edge : locationNode.getEnteringEdges()) {
               if (edge.getLineNumber() == queryLine) {
                 return true;
               }
@@ -129,13 +124,16 @@ public class LocationState
                     + parts.get(1)
                     + "\"");
           }
-        case "functionname":
+        }
+        case "functionname" -> {
           return locationNode.getFunctionName().equals(parts.get(1));
-        case "label":
-          return locationNode instanceof CFALabelNode
-              ? ((CFALabelNode) locationNode).getLabel().equals(parts.get(1))
+        }
+        case "label" -> {
+          return locationNode instanceof CFALabelNode labelNode
+              ? labelNode.getLabel().equals(parts.get(1))
               : false;
-        case "nodenumber":
+        }
+        case "nodenumber" -> {
           try {
             int queryNumber = Integer.parseInt(parts.get(1));
             return locationNode.getNodeNumber() == queryNumber;
@@ -147,7 +145,8 @@ public class LocationState
                     + parts.get(1)
                     + "\"");
           }
-        case "mainentry":
+        }
+        case "mainentry" -> {
           if (locationNode.getNumEnteringEdges() == 1
               && locationNode.getFunctionName().equals(parts.get(1))) {
             CFAEdge enteringEdge = locationNode.getEnteringEdge(0);
@@ -158,13 +157,14 @@ public class LocationState
             }
           }
           return false;
-        default:
-          throw new InvalidQueryException(
-              "The Query \""
-                  + pProperty
-                  + "\" is invalid. \""
-                  + parts.get(0)
-                  + "\" is no valid keyword");
+        }
+        default ->
+            throw new InvalidQueryException(
+                "The Query \""
+                    + pProperty
+                    + "\" is invalid. \""
+                    + parts.getFirst()
+                    + "\" is no valid keyword");
       }
     }
   }
@@ -181,6 +181,8 @@ public class LocationState
         return locationNode.getEnteringEdge(0).getLineNumber();
       }
       return 0; // DUMMY
+    } else if (pProperty.equalsIgnoreCase("nodenumber")) {
+      return locationNode.getNodeNumber();
     } else {
       return checkProperty(pProperty);
     }
@@ -193,6 +195,7 @@ public class LocationState
 
   // no equals and hashCode because there is always only one element per CFANode
 
+  @Serial
   private Object writeReplace() {
     return new SerialProxy(locationNode.getNodeNumber());
   }
@@ -203,18 +206,20 @@ public class LocationState
    * @param in the input stream
    */
   @SuppressWarnings("UnusedVariable") // parameter is required by API
+  @Serial
   private void readObject(ObjectInputStream in) throws IOException {
     throw new InvalidObjectException("Proxy required");
   }
 
   private static class SerialProxy implements Serializable {
-    private static final long serialVersionUID = 6889568471468710163L;
+    @Serial private static final long serialVersionUID = 6889568471468710163L;
     private final int nodeNumber;
 
-    public SerialProxy(int nodeNumber) {
+    SerialProxy(int nodeNumber) {
       this.nodeNumber = nodeNumber;
     }
 
+    @Serial
     private Object readResolve() {
       CFAInfo cfaInfo = SerializationInfoStorage.getInstance().getCFAInfo().orElseThrow();
       return cfaInfo.getLocationStateFactory().getState(cfaInfo.getNodeByNodeNumber(nodeNumber));
