@@ -143,7 +143,7 @@ public class ConfigurationParser {
         if (fullName.matches(".*\\(.*")) {
           List<String> stringArray = Splitter.on("(").splitToList(fullName);
           assert stringArray.size() == 2;
-          parsedId = LockIdentifier.of(stringArray.get(0), stringArray.get(1));
+          parsedId = LockIdentifier.of(stringArray.getFirst(), stringArray.get(1));
         } else {
           parsedId = LockIdentifier.of(fullName, "");
         }
