@@ -11,12 +11,18 @@ package org.sosy_lab.cpachecker.cpa.smg2;
 import static com.google.common.truth.Truth.assertThat;
 
 import com.google.common.collect.ImmutableList;
+import com.google.common.collect.ImmutableMap;
 import java.math.BigInteger;
 import java.util.List;
+import org.junit.Ignore;
 import org.junit.Test;
+import org.sosy_lab.cpachecker.cfa.ast.c.CFunctionDeclaration;
+import org.sosy_lab.cpachecker.cfa.types.c.CNumericTypes;
+import org.sosy_lab.cpachecker.cfa.types.c.CPointerType;
 import org.sosy_lab.cpachecker.cpa.smg2.SMGState.EqualityCache;
 import org.sosy_lab.cpachecker.cpa.smg2.abstraction.SMGCPAAbstractionManager;
 import org.sosy_lab.cpachecker.cpa.smg2.util.SMGException;
+import org.sosy_lab.cpachecker.cpa.smg2.util.SMGObjectAndSMGState;
 import org.sosy_lab.cpachecker.cpa.smg2.util.SMGSolverException;
 import org.sosy_lab.cpachecker.cpa.smg2.util.SMGStateAndOptionalSMGObjectAndOffset;
 import org.sosy_lab.cpachecker.cpa.smg2.util.value.ValueAndSMGState;
@@ -24,7 +30,10 @@ import org.sosy_lab.cpachecker.cpa.value.type.NumericValue;
 import org.sosy_lab.cpachecker.cpa.value.type.Value;
 import org.sosy_lab.cpachecker.exceptions.CPAException;
 import org.sosy_lab.cpachecker.util.smg.graph.SMGObject;
+import org.sosy_lab.cpachecker.util.smg.graph.SMGPointsToEdge;
 import org.sosy_lab.cpachecker.util.smg.graph.SMGSinglyLinkedListSegment;
+import org.sosy_lab.cpachecker.util.smg.graph.SMGTargetSpecifier;
+import org.sosy_lab.cpachecker.util.smg.graph.SMGValue;
 
 /*
  * Test equality and lessOrEqual methods for SMGs.
@@ -35,15 +44,257 @@ public class SMGCPAEqualityTest extends SMGCPATest0 {
   // 8 seems like a reasonable compromise that tests everything and is not too slow
   private static final int listLength = 8;
 
+  /*
+   * concrete list element = CLE
+   * CLE -> X+ -> CLE -> 0+ -> 0
+   * With a pointer towards both CLEs and X >= 0
+   */
+  @Test
+  public void SLLWithConcreteElementsLessOrEqualTest() throws SMGException, SMGSolverException {
+    // TODO: concrete list element = CLE
+    //  CLE -> X+ -> CLE -> 0+ -> 0
+    //  With a pointer towards both CLEs and X >= 0
+    Value[] pointersToFstAndLst =
+        buildConcreteListReturnFstAndLstPointer(false, sllSize, listLength);
+    // Dummy assertion
+    assertThat(pointersToFstAndLst).isNotEmpty();
+  }
+
+  /*
+   * concrete list element = CLE
+   * CLE -> X+ -> CLE -> 0+ -> 0
+   * With a pointer towards both CLEs and X >= 0
+   */
+  @Test
+  public void DLLWithConcreteElementsLessOrEqualTest() throws SMGException, SMGSolverException {
+    // TODO: concrete list element = CLE
+    //  CLE -> X+ -> CLE -> 0+ -> 0
+    //  With a pointer towards both CLEs and X >= 0
+    Value[] pointersToFstAndLst =
+        buildConcreteListReturnFstAndLstPointer(true, dllSize, listLength);
+    // Dummy assertion
+    assertThat(pointersToFstAndLst).isNotEmpty();
+  }
+
+  /*
+   * 2 lists with different lengths X, with a pointer somewhere,  -> X+ -> 0, should be equal only if the pointer is at a comparable location (examples are last and first)
+   */
+  @Ignore("TODO: fix test for non-abstraction of regions w pointers from outside the list")
+  @Test
+  public void SLLDifferentLengthSomePointerLessOrEqualTest()
+      throws CPAException, InterruptedException {
+    int maxListLen = 15;
+    for (int i = 3; i < maxListLen; i = i + 3) {
+      resetSMGStateAndVisitor();
+      SMGState stateWithoutSmallerList = currentState;
+      Value[] pointersToFstAndLstSmallerList =
+          buildConcreteListReturnFstAndLstPointer(false, sllSize, i);
+      currentState =
+          new SMGCPAAbstractionManager(currentState, 3, new SMGCPAStatistics())
+              .findAndAbstractLists();
+      assertThatPointersPointToEqualAbstractedList(currentState, i, pointersToFstAndLstSmallerList);
+      SMGState stateWithSmallerList = currentState;
+      for (int j = i; j < maxListLen + 1; j++) {
+        currentState = stateWithoutSmallerList;
+        Value[] pointersToFstAndLstLargerList =
+            buildConcreteListReturnFstAndLstPointer(false, sllSize, j);
+        currentState =
+            new SMGCPAAbstractionManager(currentState, 3, new SMGCPAStatistics())
+                .findAndAbstractLists();
+        assertThatPointersPointToEqualAbstractedList(
+            currentState, j, pointersToFstAndLstLargerList);
+        SMGState stateWithBiggerListWOLast = currentState.copyAndRemoveStackVariable("last");
+        SMGState stateWithSmallerListWOLast =
+            stateWithSmallerList.copyAndRemoveStackVariable("last");
+        SMGState stateWithBiggerListWOFirst = currentState.copyAndRemoveStackVariable("first");
+        SMGState stateWithSmallerListWOFirst =
+            stateWithSmallerList.copyAndRemoveStackVariable("first");
+        if (i != j) {
+          // Bigger does not subsume the smaller
+          assertThat(stateWithSmallerListWOLast.isLessOrEqual(stateWithBiggerListWOLast)).isFalse();
+        } else {
+          // Equal lists
+          assertThat(stateWithSmallerListWOLast.isLessOrEqual(stateWithBiggerListWOLast)).isTrue();
+        }
+        // Bigger list (currentState) is subsumed by the smaller
+        assertThat(stateWithBiggerListWOLast.isLessOrEqual(stateWithSmallerListWOLast)).isTrue();
+
+        if (i != j) {
+          // Bigger does not subsume the smaller
+          assertThat(stateWithSmallerListWOFirst.isLessOrEqual(stateWithBiggerListWOFirst))
+              .isFalse();
+        } else {
+          // Equal lists
+          assertThat(stateWithSmallerListWOFirst.isLessOrEqual(stateWithBiggerListWOFirst))
+              .isTrue();
+        }
+        // Bigger list (currentState) is subsumed by the smaller
+        assertThat(stateWithBiggerListWOFirst.isLessOrEqual(stateWithSmallerListWOFirst)).isTrue();
+
+        assertThat(stateWithSmallerListWOLast.isLessOrEqual(stateWithBiggerListWOFirst)).isFalse();
+        assertThat(stateWithBiggerListWOFirst.isLessOrEqual(stateWithSmallerListWOLast)).isFalse();
+
+        assertThat(stateWithSmallerListWOFirst.isLessOrEqual(stateWithBiggerListWOLast)).isFalse();
+        assertThat(stateWithBiggerListWOLast.isLessOrEqual(stateWithSmallerListWOFirst)).isFalse();
+      }
+    }
+  }
+
+  /*
+   * 2 lists with different lengths X, with a pointer somewhere,  -> X+ -> 0, should be equal only if the pointer is at a comparable location (examples are last and first)
+   */
+  @Ignore("TODO: fix test for non-abstraction of regions w pointers from outside the list")
+  @Test
+  public void DLLDifferentLengthSomePointerLessOrEqualTest()
+      throws CPAException, InterruptedException {
+    int maxListLen = 15;
+    for (int i = 3; i < maxListLen; i = i + 3) {
+      resetSMGStateAndVisitor();
+      SMGState stateWithoutSmallerList = currentState;
+      Value[] pointersToFstAndLstSmallerList =
+          buildConcreteListReturnFstAndLstPointer(true, dllSize, i);
+      currentState =
+          new SMGCPAAbstractionManager(currentState, 3, new SMGCPAStatistics())
+              .findAndAbstractLists();
+      assertThatPointersPointToEqualAbstractedList(currentState, i, pointersToFstAndLstSmallerList);
+      SMGState stateWithSmallerList = currentState;
+      for (int j = i; j < maxListLen + 1; j++) {
+        currentState = stateWithoutSmallerList;
+        Value[] pointersToFstAndLstLargerList =
+            buildConcreteListReturnFstAndLstPointer(true, dllSize, j);
+        currentState =
+            new SMGCPAAbstractionManager(currentState, 3, new SMGCPAStatistics())
+                .findAndAbstractLists();
+        assertThatPointersPointToEqualAbstractedList(
+            currentState, j, pointersToFstAndLstLargerList);
+        SMGState stateWithBiggerListWOLast = currentState.copyAndRemoveStackVariable("last");
+        SMGState stateWithSmallerListWOLast =
+            stateWithSmallerList.copyAndRemoveStackVariable("last");
+        SMGState stateWithBiggerListWOFirst = currentState.copyAndRemoveStackVariable("first");
+        SMGState stateWithSmallerListWOFirst =
+            stateWithSmallerList.copyAndRemoveStackVariable("first");
+        if (i != j) {
+          // Bigger does not subsume the smaller
+          assertThat(stateWithSmallerListWOLast.isLessOrEqual(stateWithBiggerListWOLast)).isFalse();
+        } else {
+          // Equal lists
+          assertThat(stateWithSmallerListWOLast.isLessOrEqual(stateWithBiggerListWOLast)).isTrue();
+        }
+        // Bigger list (currentState) is subsumed by the smaller
+        assertThat(stateWithBiggerListWOLast.isLessOrEqual(stateWithSmallerListWOLast)).isTrue();
+
+        if (i != j) {
+          // Bigger does not subsume the smaller
+          assertThat(stateWithSmallerListWOFirst.isLessOrEqual(stateWithBiggerListWOFirst))
+              .isFalse();
+        } else {
+          // Equal lists
+          assertThat(stateWithSmallerListWOFirst.isLessOrEqual(stateWithBiggerListWOFirst))
+              .isTrue();
+        }
+        // Bigger list (currentState) is subsumed by the smaller
+        assertThat(stateWithBiggerListWOFirst.isLessOrEqual(stateWithSmallerListWOFirst)).isTrue();
+
+        assertThat(stateWithSmallerListWOLast.isLessOrEqual(stateWithBiggerListWOFirst)).isFalse();
+        assertThat(stateWithBiggerListWOFirst.isLessOrEqual(stateWithSmallerListWOLast)).isFalse();
+
+        assertThat(stateWithSmallerListWOFirst.isLessOrEqual(stateWithBiggerListWOLast)).isFalse();
+        assertThat(stateWithBiggerListWOLast.isLessOrEqual(stateWithSmallerListWOFirst)).isFalse();
+      }
+    }
+  }
+
+  /*
+   * 2 lists with different lengths X, with a first and last pointer,  -> X+ -> 0, should be equal
+   */
+  @Ignore("TODO: fix test for non-abstraction of regions w pointers from outside the list")
+  @Test
+  public void SLLDifferentLengthFstAndLstPointerLessOrEqualTest()
+      throws CPAException, InterruptedException {
+    int maxListLen = 15;
+    for (int i = 3; i < maxListLen; i = i + 3) {
+      resetSMGStateAndVisitor();
+      SMGState stateWithoutSmallerList = currentState;
+      Value[] pointersToFstAndLstSmallerList =
+          buildConcreteListReturnFstAndLstPointer(false, sllSize, i);
+      currentState =
+          new SMGCPAAbstractionManager(currentState, 3, new SMGCPAStatistics())
+              .findAndAbstractLists();
+      assertThatPointersPointToEqualAbstractedList(currentState, i, pointersToFstAndLstSmallerList);
+      SMGState stateWithSmallerList = currentState;
+      for (int j = i; j < maxListLen + 1; j++) {
+        currentState = stateWithoutSmallerList;
+        Value[] pointersToFstAndLstLargerList =
+            buildConcreteListReturnFstAndLstPointer(false, sllSize, j);
+        currentState =
+            new SMGCPAAbstractionManager(currentState, 3, new SMGCPAStatistics())
+                .findAndAbstractLists();
+        assertThatPointersPointToEqualAbstractedList(
+            currentState, j, pointersToFstAndLstLargerList);
+        if (i != j) {
+          // Bigger does not subsume the smaller
+          assertThat(stateWithSmallerList.isLessOrEqual(currentState)).isFalse();
+        } else {
+          // Equal lists
+          assertThat(stateWithSmallerList.isLessOrEqual(currentState)).isTrue();
+        }
+        // Bigger list (currentState) is subsumed by the smaller
+        assertThat(currentState.isLessOrEqual(stateWithSmallerList)).isTrue();
+      }
+    }
+  }
+
+  /*
+   * 2 lists with different lengths X, with a first and last pointer,  -> X+ -> 0, should be equal
+   */
+  @Ignore("TODO: fix test for non-abstraction of regions w pointers from outside the list")
+  @Test
+  public void DLLDifferentLengthFstAndLstPointerLessOrEqualTest()
+      throws CPAException, InterruptedException {
+    int maxListLen = 15;
+    for (int i = 3; i < maxListLen; i = i + 3) {
+      resetSMGStateAndVisitor();
+      SMGState stateWithoutSmallerList = currentState;
+      Value[] pointersToFstAndLstSmallerList =
+          buildConcreteListReturnFstAndLstPointer(true, dllSize, i);
+      currentState =
+          new SMGCPAAbstractionManager(currentState, 3, new SMGCPAStatistics())
+              .findAndAbstractLists();
+      assertThatPointersPointToEqualAbstractedList(currentState, i, pointersToFstAndLstSmallerList);
+      SMGState stateWithSmallerList = currentState;
+      for (int j = i; j < maxListLen + 1; j++) {
+        currentState = stateWithoutSmallerList;
+        Value[] pointersToFstAndLstLargerList =
+            buildConcreteListReturnFstAndLstPointer(true, dllSize, j);
+        currentState =
+            new SMGCPAAbstractionManager(currentState, 3, new SMGCPAStatistics())
+                .findAndAbstractLists();
+        assertThatPointersPointToEqualAbstractedList(
+            currentState, j, pointersToFstAndLstLargerList);
+        if (i != j) {
+          // Bigger does not subsume the smaller
+          assertThat(stateWithSmallerList.isLessOrEqual(currentState)).isFalse();
+        } else {
+          // Equal lists
+          assertThat(stateWithSmallerList.isLessOrEqual(currentState)).isTrue();
+        }
+        // Bigger list (currentState) is subsumed by the smaller
+        assertThat(currentState.isLessOrEqual(stateWithSmallerList)).isTrue();
+      }
+    }
+  }
+
   /**
    * Compare 2 lists that are equal, but one is abstracted, the other is not.
    *
    * @throws SMGException never thrown
    */
+  @Ignore("TODO: fix test for non-abstraction of regions w pointers from outside the list")
   @Test
   public void concreteAndAbstractedListLessOrEqualTest() throws SMGException, SMGSolverException {
     Value[] pointersAbstractedList = buildConcreteList(false, sllSize, listLength);
-    SMGCPAAbstractionManager absFinder = new SMGCPAAbstractionManager(currentState, listLength - 1);
+    SMGCPAAbstractionManager absFinder =
+        new SMGCPAAbstractionManager(currentState, listLength - 1, new SMGCPAStatistics());
     currentState = absFinder.findAndAbstractLists();
     SMGObject abstractedObj =
         currentState
@@ -62,19 +313,21 @@ public class SMGCPAEqualityTest extends SMGCPATest0 {
             currentState.checkEqualValuesForTwoStatesWithExemptions(
                 abstractedObj,
                 concreteObjBeginning,
-                ImmutableList.of(),
+                ImmutableMap.of(),
                 currentState,
                 currentState,
-                EqualityCache.of()))
+                EqualityCache.of(),
+                true))
         .isFalse();
     assertThat(
             currentState.checkEqualValuesForTwoStatesWithExemptions(
                 concreteObjBeginning,
                 abstractedObj,
-                ImmutableList.of(),
+                ImmutableMap.of(),
                 currentState,
                 currentState,
-                EqualityCache.of()))
+                EqualityCache.of(),
+                true))
         .isFalse();
 
     // If the nfo is restricted, they are equal
@@ -82,19 +335,29 @@ public class SMGCPAEqualityTest extends SMGCPATest0 {
             currentState.checkEqualValuesForTwoStatesWithExemptions(
                 abstractedObj,
                 concreteObjBeginning,
-                ImmutableList.of(nfo),
+                ImmutableMap.of(
+                    abstractedObj,
+                    ImmutableList.of(nfo),
+                    concreteObjBeginning,
+                    ImmutableList.of(nfo)),
                 currentState,
                 currentState,
-                EqualityCache.of()))
+                EqualityCache.of(),
+                true))
         .isTrue();
     assertThat(
             currentState.checkEqualValuesForTwoStatesWithExemptions(
-                concreteObjBeginning,
                 abstractedObj,
-                ImmutableList.of(nfo),
+                concreteObjBeginning,
+                ImmutableMap.of(
+                    abstractedObj,
+                    ImmutableList.of(nfo),
+                    concreteObjBeginning,
+                    ImmutableList.of(nfo)),
                 currentState,
                 currentState,
-                EqualityCache.of()))
+                EqualityCache.of(),
+                true))
         .isTrue();
 
     SMGObject concreteObjEnd =
@@ -107,19 +370,21 @@ public class SMGCPAEqualityTest extends SMGCPATest0 {
             currentState.checkEqualValuesForTwoStatesWithExemptions(
                 abstractedObj,
                 concreteObjEnd,
-                ImmutableList.of(),
+                ImmutableMap.of(),
                 currentState,
                 currentState,
-                EqualityCache.of()))
+                EqualityCache.of(),
+                true))
         .isTrue();
     assertThat(
             currentState.checkEqualValuesForTwoStatesWithExemptions(
                 concreteObjEnd,
                 abstractedObj,
-                ImmutableList.of(),
+                ImmutableMap.of(),
                 currentState,
                 currentState,
-                EqualityCache.of()))
+                EqualityCache.of(),
+                true))
         .isTrue();
   }
 
@@ -131,12 +396,14 @@ public class SMGCPAEqualityTest extends SMGCPATest0 {
    *
    * @throws SMGException never thrown.
    */
+  @Ignore("TODO: fix test for non-abstraction of regions w pointers from outside the list")
   @Test
   public void concreteAndAbstractedListWSublistLessOrEqualTest()
       throws SMGException, SMGSolverException {
     Value[] pointersAbstractedList = buildConcreteList(false, sllSize, listLength);
     addSubListsToList(listLength, pointersAbstractedList, false);
-    SMGCPAAbstractionManager absFinder = new SMGCPAAbstractionManager(currentState, listLength - 1);
+    SMGCPAAbstractionManager absFinder =
+        new SMGCPAAbstractionManager(currentState, listLength - 1, new SMGCPAStatistics());
     currentState = absFinder.findAndAbstractLists();
     SMGObject abstractedObj =
         currentState
@@ -156,21 +423,410 @@ public class SMGCPAEqualityTest extends SMGCPATest0 {
             currentState.checkEqualValuesForTwoStatesWithExemptions(
                 abstractedObj,
                 concreteObjBeginning,
-                ImmutableList.of(nfo),
+                ImmutableMap.of(
+                    abstractedObj,
+                    ImmutableList.of(nfo),
+                    concreteObjBeginning,
+                    ImmutableList.of(nfo)),
                 currentState,
                 currentState,
-                EqualityCache.of()))
+                EqualityCache.of(),
+                true))
         .isFalse();
 
     assertThat(
             currentState.checkEqualValuesForTwoStatesWithExemptions(
-                concreteObjBeginning,
                 abstractedObj,
-                ImmutableList.of(nfo),
+                concreteObjBeginning,
+                ImmutableMap.of(
+                    abstractedObj,
+                    ImmutableList.of(nfo),
+                    concreteObjBeginning,
+                    ImmutableList.of(nfo)),
                 currentState,
                 currentState,
-                EqualityCache.of()))
+                EqualityCache.of(),
+                true))
         .isFalse();
+  }
+
+  // Build some SLL elements that are connected but have (non nfo) pointers to
+  // themselves w differing offsets. Tries NFO in different locations.
+  @Test
+  public void concreteSLLWithSelfPointerDifferingOffsetsTest()
+      throws SMGException, SMGSolverException {
+    BigInteger listSize = sllSize.add(pointerSizeInBits);
+    for (List<BigInteger> offsetsForPointers :
+        ImmutableList.of(
+            ImmutableList.of(pointerSizeInBits, pointerSizeInBits.add(pointerSizeInBits)),
+            ImmutableList.of(pointerSizeInBits.add(pointerSizeInBits), pointerSizeInBits))) {
+      for (BigInteger changingNfo = BigInteger.ZERO;
+          changingNfo.compareTo(listSize) < 0;
+          changingNfo = changingNfo.add(pointerSizeInBits)) {
+        Value[] pointersConcreteList =
+            buildConcreteList(false, sllSize.add(pointerSizeInBits), listLength, false);
+
+        SMGObjectAndSMGState stackObjAndState =
+            currentState.copyAndAddStackObject(new NumericValue(pointerSizeInBits));
+        currentState = stackObjAndState.getState();
+        SMGObject stackObj = stackObjAndState.getSMGObject();
+        currentState =
+            currentState.writeValueWithoutChecks(
+                stackObj,
+                BigInteger.ZERO,
+                pointerSizeInBits,
+                currentState
+                    .getMemoryModel()
+                    .getSMGValueFromValue(pointersConcreteList[0])
+                    .orElseThrow());
+
+        BigInteger offsetFirstSelfPtr = BigInteger.ZERO;
+        BigInteger offsetSecondSelfPtr = offsetFirstSelfPtr.add(pointerSizeInBits);
+
+        for (Value ptr : pointersConcreteList) {
+          SMGObject obj =
+              currentState
+                  .dereferencePointerWithoutMaterilization(ptr)
+                  .orElseThrow()
+                  .getSMGObject();
+          if (!changingNfo.equals(nfo)) {
+            // Change NFO for list
+            Value nextPtr =
+                currentState
+                    .readValueWithoutMaterialization(
+                        obj, nfo, pointerSizeInBits, CPointerType.POINTER_TO_VOID)
+                    .getValue();
+            assertThat(currentState.getMemoryModel().isPointer(nextPtr)).isTrue();
+            currentState =
+                currentState.writeValueWithoutChecks(
+                    obj,
+                    changingNfo,
+                    pointerSizeInBits,
+                    currentState.getMemoryModel().getSMGValueFromValue(nextPtr).orElseThrow());
+          }
+
+          if (changingNfo.equals(offsetFirstSelfPtr)) {
+            offsetFirstSelfPtr = offsetSecondSelfPtr;
+            offsetSecondSelfPtr = offsetFirstSelfPtr.add(pointerSizeInBits);
+          }
+          if (changingNfo.equals(offsetSecondSelfPtr)) {
+            offsetSecondSelfPtr = changingNfo.add(pointerSizeInBits);
+          }
+
+          assertThat(offsetFirstSelfPtr).isNotEqualTo(changingNfo);
+          assertThat(offsetSecondSelfPtr).isNotEqualTo(changingNfo);
+          assertThat(offsetFirstSelfPtr).isNotEqualTo(offsetSecondSelfPtr);
+          assertThat(offsetFirstSelfPtr.compareTo(listSize) < 0).isTrue();
+          assertThat(offsetSecondSelfPtr.compareTo(listSize) < 0).isTrue();
+          assertThat(changingNfo.compareTo(listSize) < 0).isTrue();
+
+          // Build self pointers w differing target offsets into the list
+          ValueAndSMGState selfPtrAndState =
+              currentState.searchOrCreateAddress(
+                  obj, CPointerType.POINTER_TO_VOID, offsetsForPointers.getFirst());
+          currentState = selfPtrAndState.getState();
+          currentState =
+              currentState.writeValueWithoutChecks(
+                  obj,
+                  offsetFirstSelfPtr,
+                  pointerSizeInBits,
+                  currentState
+                      .getMemoryModel()
+                      .getSMGValueFromValue(selfPtrAndState.getValue())
+                      .orElseThrow());
+
+          ValueAndSMGState otherSelfPtrAndState =
+              currentState.searchOrCreateAddress(
+                  obj, CPointerType.POINTER_TO_VOID, offsetsForPointers.get(1));
+          currentState = otherSelfPtrAndState.getState();
+          currentState =
+              currentState.writeValueWithoutChecks(
+                  obj,
+                  offsetSecondSelfPtr,
+                  pointerSizeInBits,
+                  currentState
+                      .getMemoryModel()
+                      .getSMGValueFromValue(otherSelfPtrAndState.getValue())
+                      .orElseThrow());
+        }
+
+        // Check equality of succeeding list elements
+        //   (Not equal for no excluded offsets, equal for excluded nfo)
+        for (int i = 0; i < pointersConcreteList.length - 1; i++) {
+          Value ptr1 = pointersConcreteList[i];
+          Value ptr2 = pointersConcreteList[i + 1];
+          SMGObject obj1 =
+              currentState
+                  .dereferencePointerWithoutMaterilization(ptr1)
+                  .orElseThrow()
+                  .getSMGObject();
+          SMGObject obj2 =
+              currentState
+                  .dereferencePointerWithoutMaterilization(ptr2)
+                  .orElseThrow()
+                  .getSMGObject();
+
+          assertThat(
+                  currentState.checkEqualValuesForTwoStatesWithExemptions(
+                      obj1,
+                      obj2,
+                      ImmutableMap.of(),
+                      currentState,
+                      currentState,
+                      EqualityCache.<Value>of(),
+                      true))
+              .isFalse();
+
+          assertThat(
+                  currentState.checkEqualValuesForTwoStatesWithExemptions(
+                      obj2,
+                      obj1,
+                      ImmutableMap.of(),
+                      currentState,
+                      currentState,
+                      EqualityCache.<Value>of(),
+                      true))
+              .isFalse();
+
+          assertThat(
+                  currentState.checkEqualValuesForTwoStatesWithExemptions(
+                      obj1,
+                      obj2,
+                      ImmutableMap.of(
+                          obj1, ImmutableList.of(changingNfo), obj2, ImmutableList.of(changingNfo)),
+                      currentState,
+                      currentState,
+                      EqualityCache.<Value>of(),
+                      true))
+              .isTrue();
+
+          assertThat(
+                  currentState.checkEqualValuesForTwoStatesWithExemptions(
+                      obj2,
+                      obj1,
+                      ImmutableMap.of(
+                          obj1, ImmutableList.of(changingNfo), obj2, ImmutableList.of(changingNfo)),
+                      currentState,
+                      currentState,
+                      EqualityCache.<Value>of(),
+                      true))
+              .isTrue();
+        }
+      }
+    }
+  }
+
+  // Build some DLL elements that are connected but have (non nfo/pfo) pointers to
+  // themselves w differing offsets. Tries NFO/PFO in different locations.
+  @Test
+  public void concreteDLLWithSelfPointerDifferingOffsetsTest()
+      throws SMGException, SMGSolverException {
+    BigInteger listSize = dllSize.add(pointerSizeInBits);
+    for (List<BigInteger> offsetsForPointers :
+        ImmutableList.of(
+            ImmutableList.of(pointerSizeInBits, pointerSizeInBits.add(pointerSizeInBits)),
+            ImmutableList.of(pointerSizeInBits.add(pointerSizeInBits), pointerSizeInBits))) {
+      // Respect that there is a PFO after the NFO!
+      for (BigInteger changingNfo = BigInteger.ZERO;
+          changingNfo.compareTo(listSize.subtract(pointerSizeInBits)) < 0;
+          changingNfo = changingNfo.add(pointerSizeInBits)) {
+        BigInteger changingPfo = changingNfo.add(pointerSizeInBits);
+        Value[] pointersConcreteList = buildConcreteList(true, listSize, listLength, false);
+
+        SMGObjectAndSMGState stackObjAndState =
+            currentState.copyAndAddStackObject(new NumericValue(pointerSizeInBits));
+        currentState = stackObjAndState.getState();
+        SMGObject stackObj = stackObjAndState.getSMGObject();
+        currentState =
+            currentState.writeValueWithoutChecks(
+                stackObj,
+                BigInteger.ZERO,
+                pointerSizeInBits,
+                currentState
+                    .getMemoryModel()
+                    .getSMGValueFromValue(pointersConcreteList[0])
+                    .orElseThrow());
+
+        BigInteger offsetFirstSelfPtr = BigInteger.ZERO;
+        BigInteger offsetSecondSelfPtr = offsetFirstSelfPtr.add(pointerSizeInBits);
+
+        for (Value ptr : pointersConcreteList) {
+          SMGObject obj =
+              currentState
+                  .dereferencePointerWithoutMaterilization(ptr)
+                  .orElseThrow()
+                  .getSMGObject();
+          if (!changingNfo.equals(nfo)) {
+            // Change NFO for list
+            Value nextPtr =
+                currentState
+                    .readValueWithoutMaterialization(
+                        obj, nfo, pointerSizeInBits, CPointerType.POINTER_TO_VOID)
+                    .getValue();
+            assertThat(currentState.getMemoryModel().isPointer(nextPtr)).isTrue();
+            currentState =
+                currentState.writeValueWithoutChecks(
+                    obj,
+                    changingNfo,
+                    pointerSizeInBits,
+                    currentState.getMemoryModel().getSMGValueFromValue(nextPtr).orElseThrow());
+
+            // Prev pointer
+            Value prevPtr =
+                currentState
+                    .readValueWithoutMaterialization(
+                        obj, pfo, pointerSizeInBits, CPointerType.POINTER_TO_VOID)
+                    .getValue();
+            assertThat(currentState.getMemoryModel().isPointer(prevPtr)).isTrue();
+            currentState =
+                currentState.writeValueWithoutChecks(
+                    obj,
+                    changingNfo.add(pointerSizeInBits),
+                    pointerSizeInBits,
+                    currentState.getMemoryModel().getSMGValueFromValue(prevPtr).orElseThrow());
+          }
+
+          if (changingNfo.equals(BigInteger.ZERO)) {
+            offsetFirstSelfPtr = pointerSizeInBits.add(pointerSizeInBits);
+            offsetSecondSelfPtr = offsetFirstSelfPtr.add(pointerSizeInBits);
+          } else if (changingNfo.equals(pointerSizeInBits)) {
+            offsetSecondSelfPtr = changingNfo.add(pointerSizeInBits).add(pointerSizeInBits);
+          }
+
+          assertThat(offsetFirstSelfPtr).isNotEqualTo(changingNfo);
+          assertThat(offsetSecondSelfPtr).isNotEqualTo(changingNfo);
+          assertThat(offsetFirstSelfPtr).isNotEqualTo(changingNfo.add(pointerSizeInBits));
+          assertThat(offsetSecondSelfPtr).isNotEqualTo(changingNfo.add(pointerSizeInBits));
+          assertThat(offsetFirstSelfPtr).isNotEqualTo(offsetSecondSelfPtr);
+          assertThat(offsetFirstSelfPtr.compareTo(listSize) < 0).isTrue();
+          assertThat(offsetSecondSelfPtr.compareTo(listSize) < 0).isTrue();
+          assertThat(changingNfo.compareTo(listSize) < 0).isTrue();
+          assertThat(changingNfo.add(pointerSizeInBits).compareTo(listSize) < 0).isTrue();
+
+          // Build self pointers w differing target offsets into the list
+          ValueAndSMGState selfPtrAndState =
+              currentState.searchOrCreateAddress(
+                  obj, CPointerType.POINTER_TO_VOID, offsetsForPointers.getFirst());
+          currentState = selfPtrAndState.getState();
+          currentState =
+              currentState.writeValueWithoutChecks(
+                  obj,
+                  offsetFirstSelfPtr,
+                  pointerSizeInBits,
+                  currentState
+                      .getMemoryModel()
+                      .getSMGValueFromValue(selfPtrAndState.getValue())
+                      .orElseThrow());
+
+          ValueAndSMGState otherSelfPtrAndState =
+              currentState.searchOrCreateAddress(
+                  obj, CPointerType.POINTER_TO_VOID, offsetsForPointers.get(1));
+          currentState = otherSelfPtrAndState.getState();
+          currentState =
+              currentState.writeValueWithoutChecks(
+                  obj,
+                  offsetSecondSelfPtr,
+                  pointerSizeInBits,
+                  currentState
+                      .getMemoryModel()
+                      .getSMGValueFromValue(otherSelfPtrAndState.getValue())
+                      .orElseThrow());
+        }
+
+        // Check equality of succeeding list elements
+        //   (Not equal for no excluded offsets, equal for excluded nfo)
+        for (int i = 0; i < pointersConcreteList.length - 1; i++) {
+          Value ptr1 = pointersConcreteList[i];
+          Value ptr2 = pointersConcreteList[i + 1];
+          SMGObject obj1 =
+              currentState
+                  .dereferencePointerWithoutMaterilization(ptr1)
+                  .orElseThrow()
+                  .getSMGObject();
+          SMGObject obj2 =
+              currentState
+                  .dereferencePointerWithoutMaterilization(ptr2)
+                  .orElseThrow()
+                  .getSMGObject();
+
+          assertThat(
+                  currentState.checkEqualValuesForTwoStatesWithExemptions(
+                      obj1,
+                      obj2,
+                      ImmutableMap.of(),
+                      currentState,
+                      currentState,
+                      EqualityCache.<Value>of(),
+                      true))
+              .isFalse();
+
+          assertThat(
+                  currentState.checkEqualValuesForTwoStatesWithExemptions(
+                      obj2,
+                      obj1,
+                      ImmutableMap.of(),
+                      currentState,
+                      currentState,
+                      EqualityCache.<Value>of(),
+                      true))
+              .isFalse();
+
+          assertThat(
+                  currentState.checkEqualValuesForTwoStatesWithExemptions(
+                      obj1,
+                      obj2,
+                      ImmutableMap.of(
+                          obj1, ImmutableList.of(changingNfo), obj2, ImmutableList.of(changingNfo)),
+                      currentState,
+                      currentState,
+                      EqualityCache.<Value>of(),
+                      true))
+              .isFalse();
+
+          assertThat(
+                  currentState.checkEqualValuesForTwoStatesWithExemptions(
+                      obj2,
+                      obj1,
+                      ImmutableMap.of(
+                          obj1, ImmutableList.of(changingNfo), obj2, ImmutableList.of(changingNfo)),
+                      currentState,
+                      currentState,
+                      EqualityCache.<Value>of(),
+                      true))
+              .isFalse();
+
+          assertThat(
+                  currentState.checkEqualValuesForTwoStatesWithExemptions(
+                      obj1,
+                      obj2,
+                      ImmutableMap.of(
+                          obj1,
+                          ImmutableList.of(changingNfo, changingPfo),
+                          obj2,
+                          ImmutableList.of(changingNfo, changingPfo)),
+                      currentState,
+                      currentState,
+                      EqualityCache.<Value>of(),
+                      true))
+              .isTrue();
+
+          assertThat(
+                  currentState.checkEqualValuesForTwoStatesWithExemptions(
+                      obj2,
+                      obj1,
+                      ImmutableMap.of(
+                          obj1,
+                          ImmutableList.of(changingNfo, changingPfo),
+                          obj2,
+                          ImmutableList.of(changingNfo, changingPfo)),
+                      currentState,
+                      currentState,
+                      EqualityCache.<Value>of(),
+                      true))
+              .isTrue();
+        }
+      }
+    }
   }
 
   /**
@@ -181,32 +837,49 @@ public class SMGCPAEqualityTest extends SMGCPATest0 {
    *
    * @throws SMGException never thrown
    */
+  @Ignore("TODO: fix test for non-abstraction of regions w pointers from outside the list")
   @Test
   public void abstractedListWSublistLessOrEqualTest() throws SMGException, SMGSolverException {
     Value[] pointersSmallerAbstractedList = buildConcreteList(false, sllSize, listLength - 1);
-    addSubListsToList(listLength, pointersSmallerAbstractedList, false);
-    SMGCPAAbstractionManager absFinder = new SMGCPAAbstractionManager(currentState, listLength - 1);
+    addSubListsToList(listLength, pointersSmallerAbstractedList, false, false);
+    SMGCPAAbstractionManager absFinder =
+        new SMGCPAAbstractionManager(currentState, listLength - 1, new SMGCPAStatistics());
     currentState = absFinder.findAndAbstractLists();
+    // Check that there is no more abstraction found
+    absFinder = new SMGCPAAbstractionManager(currentState, listLength - 1, new SMGCPAStatistics());
+    SMGState state2 = absFinder.findAndAbstractLists();
+    assertThat(state2.getMemoryModel().getSmg().getObjects())
+        .isEqualTo(currentState.getMemoryModel().getSmg().getObjects());
     SMGObject smallerAbstractedListObj =
         currentState
             .dereferencePointerWithoutMaterilization(pointersSmallerAbstractedList[0])
             .orElseThrow()
             .getSMGObject();
 
-    Value[] pointersAbstractedList = buildConcreteList(false, sllSize, listLength);
-    addSubListsToList(listLength, pointersAbstractedList, false);
-    absFinder = new SMGCPAAbstractionManager(currentState, listLength - 1);
+    Value[] pointersAbstractedList = buildConcreteList(false, sllSize, listLength, false);
+    addSubListsToList(listLength, pointersAbstractedList, false, false);
+    absFinder = new SMGCPAAbstractionManager(currentState, listLength - 1, new SMGCPAStatistics());
     currentState = absFinder.findAndAbstractLists();
+    // Check that there is no more abstraction found
+    absFinder = new SMGCPAAbstractionManager(currentState, listLength - 1, new SMGCPAStatistics());
+    state2 = absFinder.findAndAbstractLists();
+    assertThat(state2.getMemoryModel().getSmg().getObjects())
+        .isEqualTo(currentState.getMemoryModel().getSmg().getObjects());
     SMGObject abstractedListObj =
         currentState
             .dereferencePointerWithoutMaterilization(pointersAbstractedList[0])
             .orElseThrow()
             .getSMGObject();
 
-    Value[] pointersAbstractedList2 = buildConcreteList(false, sllSize, listLength);
-    addSubListsToList(listLength, pointersAbstractedList2, false);
-    absFinder = new SMGCPAAbstractionManager(currentState, listLength - 1);
+    Value[] pointersAbstractedList2 = buildConcreteList(false, sllSize, listLength, false);
+    addSubListsToList(listLength, pointersAbstractedList2, false, false);
+    absFinder = new SMGCPAAbstractionManager(currentState, listLength - 1, new SMGCPAStatistics());
     currentState = absFinder.findAndAbstractLists();
+    // Check that there is no more abstraction found
+    absFinder = new SMGCPAAbstractionManager(currentState, listLength - 1, new SMGCPAStatistics());
+    state2 = absFinder.findAndAbstractLists();
+    assertThat(state2.getMemoryModel().getSmg().getObjects())
+        .isEqualTo(currentState.getMemoryModel().getSmg().getObjects());
     SMGObject abstractedListObj2 =
         currentState
             .dereferencePointerWithoutMaterilization(pointersAbstractedList2[0])
@@ -217,20 +890,22 @@ public class SMGCPAEqualityTest extends SMGCPATest0 {
             currentState.checkEqualValuesForTwoStatesWithExemptions(
                 abstractedListObj2,
                 abstractedListObj,
-                ImmutableList.of(),
+                ImmutableMap.of(),
                 currentState,
                 currentState,
-                EqualityCache.<Value>of()))
+                EqualityCache.<Value>of(),
+                true))
         .isTrue();
 
     assertThat(
             currentState.checkEqualValuesForTwoStatesWithExemptions(
                 abstractedListObj,
                 abstractedListObj2,
-                ImmutableList.of(),
+                ImmutableMap.of(),
                 currentState,
                 currentState,
-                EqualityCache.<Value>of()))
+                EqualityCache.<Value>of(),
+                true))
         .isTrue();
 
     // Comparing the abstracted objects returns TRUE as they both have the same sublists/values
@@ -238,20 +913,22 @@ public class SMGCPAEqualityTest extends SMGCPATest0 {
             currentState.checkEqualValuesForTwoStatesWithExemptions(
                 abstractedListObj,
                 smallerAbstractedListObj,
-                ImmutableList.of(),
+                ImmutableMap.of(),
                 currentState,
                 currentState,
-                EqualityCache.<Value>of()))
+                EqualityCache.<Value>of(),
+                true))
         .isTrue();
 
     assertThat(
             currentState.checkEqualValuesForTwoStatesWithExemptions(
                 smallerAbstractedListObj,
                 abstractedListObj,
-                ImmutableList.of(),
+                ImmutableMap.of(),
                 currentState,
                 currentState,
-                EqualityCache.<Value>of()))
+                EqualityCache.<Value>of(),
+                true))
         .isTrue();
 
     // Compare the length of the top lists by comparing the shape
@@ -261,7 +938,10 @@ public class SMGCPAEqualityTest extends SMGCPATest0 {
                 pointersSmallerAbstractedList[0],
                 currentState,
                 pointersAbstractedList[0],
-                EqualityCache.<Value>of()))
+                EqualityCache.<Value>of(),
+                EqualityCache.of(),
+                false,
+                true))
         .isFalse();
     assertThat(
             currentState.areValuesEqual(
@@ -269,7 +949,10 @@ public class SMGCPAEqualityTest extends SMGCPATest0 {
                 pointersAbstractedList[0],
                 currentState,
                 pointersSmallerAbstractedList[0],
-                EqualityCache.<Value>of()))
+                EqualityCache.<Value>of(),
+                EqualityCache.of(),
+                false,
+                true))
         .isTrue();
   }
 
@@ -283,16 +966,35 @@ public class SMGCPAEqualityTest extends SMGCPATest0 {
   public void abstractedListWSublistNotLessOrEqualTest() throws SMGException, SMGSolverException {
     for (int i = 0; i < listLength; i++) {
       resetSMGStateAndVisitor();
-      Value[] pointersAbstractedShortList = buildConcreteList(false, sllSize, listLength);
+      Value[] pointersAbstractedShortList = buildConcreteList(false, sllSize, listLength, false);
+
+      SMGObjectAndSMGState stackObjAndState =
+          currentState.copyAndAddStackObject(new NumericValue(pointerSizeInBits));
+      currentState = stackObjAndState.getState();
+      SMGObject stackObj = stackObjAndState.getSMGObject();
+      currentState = currentState.copyAndAddDummyStackFrame();
+      currentState =
+          currentState.copyAndAddLocalVariable(
+              stackObjAndState.getSMGObject(), "var", CPointerType.POINTER_TO_VOID);
+      currentState =
+          currentState.writeValueWithoutChecks(
+              stackObj,
+              BigInteger.ZERO,
+              pointerSizeInBits,
+              currentState
+                  .getMemoryModel()
+                  .getSMGValueFromValue(pointersAbstractedShortList[0])
+                  .orElseThrow());
+
       int counter = 0;
       for (Value pointer : pointersAbstractedShortList) {
         // Generate the same list for each top list segment and save the first pointer as data
         Value[] pointersNested;
         if (i == counter) {
           // Make 1 list shorter
-          pointersNested = buildConcreteList(false, sllSize, listLength / 2);
+          pointersNested = buildConcreteList(false, sllSize, listLength / 2, false);
         } else {
-          pointersNested = buildConcreteList(false, sllSize, listLength);
+          pointersNested = buildConcreteList(false, sllSize, listLength, false);
         }
         // We care only about the first pointer here
         SMGStateAndOptionalSMGObjectAndOffset topListSegmentAndState =
@@ -310,7 +1012,8 @@ public class SMGCPAEqualityTest extends SMGCPATest0 {
                     .orElseThrow());
         counter++;
       }
-      SMGCPAAbstractionManager absFinder = new SMGCPAAbstractionManager(currentState, listLength);
+      SMGCPAAbstractionManager absFinder =
+          new SMGCPAAbstractionManager(currentState, listLength, new SMGCPAStatistics());
       currentState = absFinder.findAndAbstractLists();
       SMGObject abstractedObjShort =
           currentState
@@ -322,9 +1025,27 @@ public class SMGCPAEqualityTest extends SMGCPATest0 {
       assertThat(abstractedObjShort instanceof SMGSinglyLinkedListSegment).isFalse();
 
       // Abstracted complete list
-      Value[] pointersAbstractedList = buildConcreteList(false, sllSize, listLength);
-      addSubListsToList(listLength, pointersAbstractedList, false);
-      absFinder = new SMGCPAAbstractionManager(currentState, listLength);
+      Value[] pointersAbstractedList = buildConcreteList(false, sllSize, listLength, false);
+
+      stackObjAndState = currentState.copyAndAddStackObject(new NumericValue(pointerSizeInBits));
+      currentState = stackObjAndState.getState();
+      stackObj = stackObjAndState.getSMGObject();
+      currentState = currentState.copyAndAddDummyStackFrame();
+      currentState =
+          currentState.copyAndAddLocalVariable(
+              stackObjAndState.getSMGObject(), "var2", CPointerType.POINTER_TO_VOID);
+      currentState =
+          currentState.writeValueWithoutChecks(
+              stackObj,
+              BigInteger.ZERO,
+              pointerSizeInBits,
+              currentState
+                  .getMemoryModel()
+                  .getSMGValueFromValue(pointersAbstractedList[0])
+                  .orElseThrow());
+
+      addSubListsToList(listLength, pointersAbstractedList, false, false);
+      absFinder = new SMGCPAAbstractionManager(currentState, listLength, new SMGCPAStatistics());
       currentState = absFinder.findAndAbstractLists();
       SMGObject abstractedObj =
           currentState
@@ -333,9 +1054,27 @@ public class SMGCPAEqualityTest extends SMGCPATest0 {
               .getSMGObject();
 
       // Concrete complete list
-      Value[] pointersOtherList = buildConcreteList(false, sllSize, listLength);
-      addSubListsToList(listLength, pointersOtherList, false);
-      absFinder = new SMGCPAAbstractionManager(currentState, listLength);
+      Value[] pointersOtherList = buildConcreteList(false, sllSize, listLength, false);
+
+      stackObjAndState = currentState.copyAndAddStackObject(new NumericValue(pointerSizeInBits));
+      currentState = stackObjAndState.getState();
+      stackObj = stackObjAndState.getSMGObject();
+      currentState = currentState.copyAndAddDummyStackFrame();
+      currentState =
+          currentState.copyAndAddLocalVariable(
+              stackObjAndState.getSMGObject(), "var3", CPointerType.POINTER_TO_VOID);
+      currentState =
+          currentState.writeValueWithoutChecks(
+              stackObj,
+              BigInteger.ZERO,
+              pointerSizeInBits,
+              currentState
+                  .getMemoryModel()
+                  .getSMGValueFromValue(pointersOtherList[0])
+                  .orElseThrow());
+
+      addSubListsToList(listLength, pointersOtherList, false, false);
+      absFinder = new SMGCPAAbstractionManager(currentState, listLength, new SMGCPAStatistics());
       currentState = absFinder.findAndAbstractLists();
       SMGObject concreteObjBeginning =
           currentState
@@ -348,20 +1087,22 @@ public class SMGCPAEqualityTest extends SMGCPATest0 {
               currentState.checkEqualValuesForTwoStatesWithExemptions(
                   abstractedObjShort,
                   concreteObjBeginning,
-                  ImmutableList.of(),
+                  ImmutableMap.of(),
                   currentState,
                   currentState,
-                  EqualityCache.<Value>of()))
+                  EqualityCache.<Value>of(),
+                  true))
           .isFalse();
 
       assertThat(
               currentState.checkEqualValuesForTwoStatesWithExemptions(
                   abstractedObj,
                   abstractedObjShort,
-                  ImmutableList.of(),
+                  ImmutableMap.of(),
                   currentState,
                   currentState,
-                  EqualityCache.<Value>of()))
+                  EqualityCache.<Value>of(),
+                  true))
           .isFalse();
     }
   }
@@ -378,25 +1119,48 @@ public class SMGCPAEqualityTest extends SMGCPATest0 {
   public void abstractedListWSublistNotLessOrEqualTest2() throws SMGException, SMGSolverException {
     for (int i = 0; i < listLength; i++) {
       resetSMGStateAndVisitor();
-      Value[] pointersConcreteDifferentList = buildConcreteList(false, sllSize, listLength);
+      Value[] pointersConcreteDifferentList = buildConcreteList(false, sllSize, listLength, false);
+
+      currentState = currentState.copyAndAddStackFrame(CFunctionDeclaration.DUMMY);
+      SMGObjectAndSMGState stackObjAndState =
+          currentState.copyAndAddStackObject(new NumericValue(pointerSizeInBits));
+      currentState = stackObjAndState.getState();
+      currentState =
+          currentState.copyAndAddLocalVariable(
+              stackObjAndState.getSMGObject(), "var", CPointerType.POINTER_TO_VOID);
+      SMGObject stackObj =
+          currentState.getMemoryModel().getObjectForVisibleVariable("var").orElseThrow();
+      currentState =
+          currentState.writeValueWithoutChecks(
+              stackObj,
+              BigInteger.ZERO,
+              pointerSizeInBits,
+              currentState
+                  .getMemoryModel()
+                  .getSMGValueFromValue(pointersConcreteDifferentList[0])
+                  .orElseThrow());
+
+      // Adds sublists equal sublists (0 value in all)
       Value[][] nestedDifferentLists =
-          addSubListsToList(listLength, pointersConcreteDifferentList, false);
+          addSubListsToList(listLength, pointersConcreteDifferentList, false, false);
       SMGObject ithObj =
           currentState
               .dereferencePointerWithoutMaterilization(nestedDifferentLists[i][i])
               .orElseThrow()
               .getSMGObject();
+      // Write -1 as value in ith element to prevent abstraction of this sublist and the toplist
       currentState =
           currentState.writeValueWithChecks(
               ithObj,
               new NumericValue(BigInteger.ZERO),
-              pointerSizeInBits,
+              new NumericValue(pointerSizeInBits),
               new NumericValue(-1),
-              null,
-              dummyCDAEdge);
+              CNumericTypes.INT,
+              dummyCFAEdge);
 
       SMGCPAAbstractionManager absFinder =
-          new SMGCPAAbstractionManager(currentState, listLength - 1);
+          new SMGCPAAbstractionManager(currentState, listLength - 1, new SMGCPAStatistics());
+      assert currentState.getMemoryModel().checkSMGSanity();
       currentState = absFinder.findAndAbstractLists();
       SMGObject notAbstractedListDifferentObj =
           currentState
@@ -408,9 +1172,27 @@ public class SMGCPAEqualityTest extends SMGCPATest0 {
       assertThat(notAbstractedListDifferentObj instanceof SMGSinglyLinkedListSegment).isFalse();
 
       // Abstracted complete list
-      Value[] pointersAbstractedList = buildConcreteList(false, sllSize, listLength);
-      addSubListsToList(listLength, pointersAbstractedList, false);
-      absFinder = new SMGCPAAbstractionManager(currentState, listLength - 1);
+      Value[] pointersAbstractedList = buildConcreteList(false, sllSize, listLength, false);
+
+      stackObjAndState = currentState.copyAndAddStackObject(new NumericValue(pointerSizeInBits));
+      currentState = stackObjAndState.getState();
+      currentState =
+          currentState.copyAndAddLocalVariable(
+              stackObjAndState.getSMGObject(), "var2", CPointerType.POINTER_TO_VOID);
+      stackObj = currentState.getMemoryModel().getObjectForVisibleVariable("var2").orElseThrow();
+      currentState =
+          currentState.writeValueWithoutChecks(
+              stackObj,
+              BigInteger.ZERO,
+              pointerSizeInBits,
+              currentState
+                  .getMemoryModel()
+                  .getSMGValueFromValue(pointersAbstractedList[0])
+                  .orElseThrow());
+
+      addSubListsToList(listLength, pointersAbstractedList, false, false);
+      absFinder =
+          new SMGCPAAbstractionManager(currentState, listLength - 1, new SMGCPAStatistics());
       currentState = absFinder.findAndAbstractLists();
       SMGObject abstractedObj =
           currentState
@@ -419,9 +1201,27 @@ public class SMGCPAEqualityTest extends SMGCPATest0 {
               .getSMGObject();
 
       // Concrete complete list
-      Value[] pointersConcreteList = buildConcreteList(false, sllSize, listLength);
-      addSubListsToList(listLength, pointersConcreteList, false);
-      absFinder = new SMGCPAAbstractionManager(currentState, listLength - 1);
+      Value[] pointersConcreteList = buildConcreteList(false, sllSize, listLength, false);
+
+      stackObjAndState = currentState.copyAndAddStackObject(new NumericValue(pointerSizeInBits));
+      currentState = stackObjAndState.getState();
+      currentState =
+          currentState.copyAndAddLocalVariable(
+              stackObjAndState.getSMGObject(), "var3", CPointerType.POINTER_TO_VOID);
+      stackObj = currentState.getMemoryModel().getObjectForVisibleVariable("var3").orElseThrow();
+      currentState =
+          currentState.writeValueWithoutChecks(
+              stackObj,
+              BigInteger.ZERO,
+              pointerSizeInBits,
+              currentState
+                  .getMemoryModel()
+                  .getSMGValueFromValue(pointersConcreteList[0])
+                  .orElseThrow());
+
+      addSubListsToList(listLength, pointersConcreteList, false, false);
+      absFinder =
+          new SMGCPAAbstractionManager(currentState, listLength - 1, new SMGCPAStatistics());
       currentState = absFinder.findAndAbstractLists();
       SMGObject concreteObjBeginning =
           currentState
@@ -434,38 +1234,58 @@ public class SMGCPAEqualityTest extends SMGCPATest0 {
               currentState.checkEqualValuesForTwoStatesWithExemptions(
                   notAbstractedListDifferentObj,
                   concreteObjBeginning,
-                  ImmutableList.of(nfo),
+                  ImmutableMap.of(
+                      notAbstractedListDifferentObj,
+                      ImmutableList.of(nfo),
+                      concreteObjBeginning,
+                      ImmutableList.of(nfo)),
                   currentState,
                   currentState,
-                  EqualityCache.<Value>of()))
+                  EqualityCache.<Value>of(),
+                  true))
           .isFalse();
       assertThat(
               currentState.checkEqualValuesForTwoStatesWithExemptions(
                   concreteObjBeginning,
                   notAbstractedListDifferentObj,
-                  ImmutableList.of(nfo),
+                  ImmutableMap.of(
+                      concreteObjBeginning,
+                      ImmutableList.of(nfo),
+                      notAbstractedListDifferentObj,
+                      ImmutableList.of(nfo)),
                   currentState,
                   currentState,
-                  EqualityCache.<Value>of()))
+                  EqualityCache.<Value>of(),
+                  true))
           .isFalse();
 
       assertThat(
               currentState.checkEqualValuesForTwoStatesWithExemptions(
                   abstractedObj,
                   notAbstractedListDifferentObj,
-                  ImmutableList.of(nfo),
+                  ImmutableMap.of(
+                      abstractedObj,
+                      ImmutableList.of(nfo),
+                      notAbstractedListDifferentObj,
+                      ImmutableList.of(nfo)),
                   currentState,
                   currentState,
-                  EqualityCache.<Value>of()))
+                  EqualityCache.<Value>of(),
+                  true))
           .isFalse();
       assertThat(
               currentState.checkEqualValuesForTwoStatesWithExemptions(
                   notAbstractedListDifferentObj,
                   abstractedObj,
-                  ImmutableList.of(nfo),
+                  ImmutableMap.of(
+                      notAbstractedListDifferentObj,
+                      ImmutableList.of(nfo),
+                      abstractedObj,
+                      ImmutableList.of(nfo)),
                   currentState,
                   currentState,
-                  EqualityCache.<Value>of()))
+                  EqualityCache.<Value>of(),
+                  true))
           .isFalse();
     }
   }
@@ -474,35 +1294,54 @@ public class SMGCPAEqualityTest extends SMGCPATest0 {
    * We have a list, we check the next components' existence, then we move the current pointer to
    * the next and free the prev segment. The resulting list should be covered by the previous.
    */
+  @Ignore("TODO: fix test for non-abstraction of regions w pointers from outside the list")
   @Test
-  public void testFreeLoopEquality() throws CPAException, InterruptedException {
-    Value[] pointersConcreteDifferentList = buildConcreteList(true, dllSize, listLength);
-    SMGCPAAbstractionManager absFinder = new SMGCPAAbstractionManager(currentState, listLength - 1);
+  public void testSLLNextPointerFreeLoopEquality() throws CPAException, InterruptedException {
+    Value[] pointersConcreteDifferentList = buildConcreteList(false, sllSize, listLength);
+    SMGCPAAbstractionManager absFinder =
+        new SMGCPAAbstractionManager(currentState, listLength - 1, new SMGCPAStatistics());
     currentState = absFinder.findAndAbstractLists();
     // "free" list except for last segment
     // We explicitly deref the current segment and read the next pointer beforehand
     Value lastNextPointer = null;
     for (int i = 0; i < listLength; i++) {
-      List<SMGStateAndOptionalSMGObjectAndOffset> deref =
-          currentState.dereferencePointer(pointersConcreteDifferentList[i]);
+      List<SMGStateAndOptionalSMGObjectAndOffset> deref;
+      if (i == listLength - 1) {
+        // Don't use the last ptr in the end of the array
+        deref = currentState.dereferencePointer(lastNextPointer);
+      } else {
+        deref = currentState.dereferencePointer(pointersConcreteDifferentList[i]);
+      }
       // Should only be 1 list element
       assertThat(deref).hasSize(1);
-      currentState = deref.get(0).getSMGState();
-      assertThat(deref.get(0).hasSMGObjectAndOffset()).isTrue();
-      assertThat(deref.get(0).getOffsetForObject().asNumericValue().bigIntegerValue())
+      currentState = deref.getFirst().getSMGState();
+      assertThat(deref.getFirst().hasSMGObjectAndOffset()).isTrue();
+      assertThat(((NumericValue) deref.getFirst().getOffsetForObject()).bigIntegerValue())
           .isEqualTo(BigInteger.ZERO);
-      List<ValueAndSMGState> readNexts =
-          evaluator.readValueWithPointerDereference(
-              currentState,
-              pointersConcreteDifferentList[i],
-              new NumericValue(nfo),
-              pointerSizeInBits,
-              null);
+      List<ValueAndSMGState> readNexts;
+      if (i == listLength - 1) {
+        // Don't use the last ptr in the end of the array
+        readNexts =
+            evaluator.readValueWithPointerDereference(
+                currentState,
+                lastNextPointer,
+                new NumericValue(nfo),
+                pointerSizeInBits,
+                CPointerType.POINTER_TO_VOID);
+      } else {
+        readNexts =
+            evaluator.readValueWithPointerDereference(
+                currentState,
+                pointersConcreteDifferentList[i],
+                new NumericValue(nfo),
+                pointerSizeInBits,
+                CPointerType.POINTER_TO_VOID);
+      }
       ValueAndSMGState readNext;
       if (i < listLength - 1) {
         // Should only be 1 list element
         assertThat(readNexts).hasSize(1);
-        readNext = readNexts.get(0);
+        readNext = readNexts.getFirst();
       } else {
         assertThat(readNexts).hasSize(2);
         readNext = readNexts.get(1);
@@ -511,11 +1350,61 @@ public class SMGCPAEqualityTest extends SMGCPATest0 {
 
       currentState = readNext.getState();
       Value readPointer = readNext.getValue();
-      if (i + 1 < listLength) {
+      Value prevPtr = null;
+      if (i + 2 >= listLength) {
+        // Read pointer now points to the last of the original concrete elements and the next in the
+        // array is "last"
+        // As a result, the last (pointersConcreteDifferentList[i + 1]) points to 0+
+        // and the readPointer to the object before
+        // read         last
+        //   v           v
+        // i -> i + i -> 0+
+        assertThat(readPointer).isNotEqualTo(pointersConcreteDifferentList[listLength - 1]);
+        // readPTE is the next pointer from the obj of pointersConcreteDifferentList[i]
+        SMGPointsToEdge readPTE =
+            currentState
+                .getMemoryModel()
+                .getSmg()
+                .getPTEdge(
+                    currentState.getMemoryModel().getSMGValueFromValue(readPointer).orElseThrow())
+                .orElseThrow();
+        SMGPointsToEdge arrayPTE =
+            currentState
+                .getMemoryModel()
+                .getSmg()
+                .getPTEdge(
+                    currentState
+                        .getMemoryModel()
+                        .getSMGValueFromValue(pointersConcreteDifferentList[listLength - 1])
+                        .orElseThrow())
+                .orElseThrow();
+        assertThat(readPTE.pointsTo()).isNotEqualTo(arrayPTE.pointsTo());
+        assertThat(readPTE.targetSpecifier()).isEqualTo(SMGTargetSpecifier.IS_REGION);
+        assertThat(arrayPTE.targetSpecifier()).isEqualTo(SMGTargetSpecifier.IS_LAST_POINTER);
+        ValueAndSMGState ptrToZeroPlusAndSt =
+            currentState.readValueWithoutMaterialization(
+                readPTE.pointsTo(), nfo, pointerSizeInBits, CPointerType.POINTER_TO_VOID);
+        currentState = ptrToZeroPlusAndSt.getState();
+        Value ptrToZeroPlus = ptrToZeroPlusAndSt.getValue();
+        SMGPointsToEdge ptrToZeroPlusPTE =
+            currentState
+                .getMemoryModel()
+                .getSmg()
+                .getPTEdge(
+                    currentState.getMemoryModel().getSMGValueFromValue(ptrToZeroPlus).orElseThrow())
+                .orElseThrow();
+        assertThat(ptrToZeroPlusPTE.pointsTo()).isEqualTo(arrayPTE.pointsTo());
+        assertThat(ptrToZeroPlusPTE.targetSpecifier())
+            .isEqualTo(SMGTargetSpecifier.IS_FIRST_POINTER);
+      } else if (i + 1 < listLength) {
         assertThat(readPointer).isEqualTo(pointersConcreteDifferentList[i + 1]);
-      } else {
-        lastNextPointer = readPointer;
       }
+      if (i + 1 == listLength) {
+        prevPtr = lastNextPointer;
+      } else {
+        prevPtr = pointersConcreteDifferentList[i];
+      }
+
       SMGObject notAbstractedListObj =
           currentState
               .dereferencePointerWithoutMaterilization(readPointer)
@@ -523,11 +1412,20 @@ public class SMGCPAEqualityTest extends SMGCPATest0 {
               .getSMGObject();
       assertThat(notAbstractedListObj.isSLL()).isFalse();
       assertThat(currentState.getMemoryModel().isObjectValid(notAbstractedListObj)).isTrue();
+      // Save the ptr to the next segment in a stack var to avoid cleanup of the ptr
+      SMGObjectAndSMGState newStackObjAndState =
+          currentState.copyAndAddStackObject(new NumericValue(pointerSizeInBits));
+      currentState = newStackObjAndState.getState();
+      currentState =
+          currentState.writeValueWithoutChecks(
+              newStackObjAndState.getSMGObject(),
+              BigInteger.ZERO,
+              pointerSizeInBits,
+              currentState.getMemoryModel().getSMGValueFromValue(readPointer).orElseThrow());
       // Free current list segment
-      List<SMGState> newStatesAfterFree =
-          currentState.free(pointersConcreteDifferentList[i], null, null);
+      List<SMGState> newStatesAfterFree = currentState.free(prevPtr, null, null);
       assertThat(newStatesAfterFree).hasSize(1);
-      currentState = newStatesAfterFree.get(0);
+      currentState = newStatesAfterFree.getFirst();
       notAbstractedListObj =
           currentState
               .dereferencePointerWithoutMaterilization(readPointer)
@@ -536,10 +1434,11 @@ public class SMGCPAEqualityTest extends SMGCPATest0 {
       assertThat(currentState.getMemoryModel().isObjectValid(notAbstractedListObj)).isTrue();
       notAbstractedListObj =
           currentState
-              .dereferencePointerWithoutMaterilization(pointersConcreteDifferentList[i])
+              .dereferencePointerWithoutMaterilization(prevPtr)
               .orElseThrow()
               .getSMGObject();
       assertThat(currentState.getMemoryModel().isObjectValid(notAbstractedListObj)).isFalse();
+      lastNextPointer = readPointer;
     }
     // Now we save the state for later
     SMGState stateW1Left = currentState;
@@ -550,18 +1449,22 @@ public class SMGCPAEqualityTest extends SMGCPATest0 {
         currentState.dereferencePointer(lastNextPointer);
     // Should only be 1 list element
     assertThat(deref).hasSize(1);
-    currentState = deref.get(0).getSMGState();
-    assertThat(deref.get(0).hasSMGObjectAndOffset()).isTrue();
-    assertThat(deref.get(0).getOffsetForObject().asNumericValue().bigIntegerValue())
+    currentState = deref.getFirst().getSMGState();
+    assertThat(deref.getFirst().hasSMGObjectAndOffset()).isTrue();
+    assertThat(((NumericValue) deref.getFirst().getOffsetForObject()).bigIntegerValue())
         .isEqualTo(BigInteger.ZERO);
     List<ValueAndSMGState> readNextsInLast =
         evaluator.readValueWithPointerDereference(
-            currentState, lastNextPointer, new NumericValue(nfo), pointerSizeInBits, null);
+            currentState,
+            lastNextPointer,
+            new NumericValue(nfo),
+            pointerSizeInBits,
+            CPointerType.POINTER_TO_VOID);
     // Should only be 1 list element
     assertThat(readNextsInLast).hasSize(2);
     // When materializing, the first element is the minimal element, confirm that the value is 0
-    assertThat(readNextsInLast.get(0).getValue().isNumericValue()).isTrue();
-    assertThat(readNextsInLast.get(0).getValue().asNumericValue().bigIntegerValue())
+    assertThat(readNextsInLast.getFirst().getValue() instanceof NumericValue).isTrue();
+    assertThat(((NumericValue) readNextsInLast.getFirst().getValue()).bigIntegerValue())
         .isEqualTo(BigInteger.ZERO);
     // Confirm that the other is materialized correctly
     currentState = readNextsInLast.get(1).getState();
@@ -574,13 +1477,419 @@ public class SMGCPAEqualityTest extends SMGCPATest0 {
     assertThat(materializedList.isSLL()).isFalse();
     ValueAndSMGState pointerToZeroPlus =
         currentState.readValueWithoutMaterialization(
-            materializedList, nfo, pointerSizeInBits, null);
+            materializedList, nfo, pointerSizeInBits, CPointerType.POINTER_TO_VOID);
     assertThat(currentState.getMemoryModel().pointsToZeroPlus(pointerToZeroPlus.getValue()))
         .isTrue();
     // Now we free the list element from before
     List<SMGState> freeList = currentState.free(lastNextPointer, null, null);
     assertThat(freeList).hasSize(1);
-    currentState = freeList.get(0);
+    currentState = freeList.getFirst();
+    // Compare the 2 states from before and now
+    assertThat(currentState.isLessOrEqual(stateW1Left)).isTrue();
+  }
+
+  /**
+   * We have a list, we check the next components' existence, then we move the current pointer to
+   * the next and free the prev segment. The resulting list should be covered by the previous.
+   */
+  @Ignore("TODO: fix test for non-abstraction of regions w pointers from outside the list")
+  @Test
+  public void testDLLNextPointerFreeLoopEquality() throws CPAException, InterruptedException {
+    Value[] pointersConcreteDifferentList = buildConcreteList(true, dllSize, listLength);
+    SMGCPAAbstractionManager absFinder =
+        new SMGCPAAbstractionManager(currentState, listLength - 1, new SMGCPAStatistics());
+    currentState = absFinder.findAndAbstractLists();
+    // "free" list except for last segment
+    // We explicitly deref the current segment and read the next pointer beforehand
+    Value lastNextPointer = null;
+    for (int i = 0; i < listLength; i++) {
+      List<SMGStateAndOptionalSMGObjectAndOffset> deref;
+      if (i == listLength - 1) {
+        // Don't use the last ptr in the end of the array
+        deref = currentState.dereferencePointer(lastNextPointer);
+      } else {
+        deref = currentState.dereferencePointer(pointersConcreteDifferentList[i]);
+      }
+      // Should only be 1 list element
+      assertThat(deref).hasSize(1);
+      currentState = deref.getFirst().getSMGState();
+      assertThat(deref.getFirst().hasSMGObjectAndOffset()).isTrue();
+      assertThat(((NumericValue) deref.getFirst().getOffsetForObject()).bigIntegerValue())
+          .isEqualTo(BigInteger.ZERO);
+      List<ValueAndSMGState> readNexts;
+      if (i == listLength - 1) {
+        // Don't use the last ptr in the end of the array
+        readNexts =
+            evaluator.readValueWithPointerDereference(
+                currentState,
+                lastNextPointer,
+                new NumericValue(nfo),
+                pointerSizeInBits,
+                CPointerType.POINTER_TO_VOID);
+      } else {
+        readNexts =
+            evaluator.readValueWithPointerDereference(
+                currentState,
+                pointersConcreteDifferentList[i],
+                new NumericValue(nfo),
+                pointerSizeInBits,
+                CPointerType.POINTER_TO_VOID);
+      }
+      ValueAndSMGState readNext;
+      if (i < listLength - 1) {
+        // Should only be 1 list element
+        assertThat(readNexts).hasSize(1);
+        readNext = readNexts.getFirst();
+      } else {
+        assertThat(readNexts).hasSize(2);
+        readNext = readNexts.get(1);
+      }
+      // We read the next pointer pointing to an abstracted list, hence this list was materialized
+
+      currentState = readNext.getState();
+      Value readPointer = readNext.getValue();
+      Value prevPtr = null;
+      if (i + 2 >= listLength) {
+        // Read pointer now points to the last of the original concrete elements and the next in the
+        // array is "last"
+        // As a result, the last (pointersConcreteDifferentList[i + 1]) points to 0+
+        // and the readPointer to the object before
+        // read         last
+        //   v           v
+        // i -> i + i -> 0+
+        assertThat(readPointer).isNotEqualTo(pointersConcreteDifferentList[listLength - 1]);
+        // readPTE is the next pointer from the obj of pointersConcreteDifferentList[i]
+        SMGPointsToEdge readPTE =
+            currentState
+                .getMemoryModel()
+                .getSmg()
+                .getPTEdge(
+                    currentState.getMemoryModel().getSMGValueFromValue(readPointer).orElseThrow())
+                .orElseThrow();
+        SMGPointsToEdge arrayPTE =
+            currentState
+                .getMemoryModel()
+                .getSmg()
+                .getPTEdge(
+                    currentState
+                        .getMemoryModel()
+                        .getSMGValueFromValue(pointersConcreteDifferentList[listLength - 1])
+                        .orElseThrow())
+                .orElseThrow();
+        assertThat(readPTE.pointsTo()).isNotEqualTo(arrayPTE.pointsTo());
+        assertThat(readPTE.targetSpecifier()).isEqualTo(SMGTargetSpecifier.IS_REGION);
+        assertThat(arrayPTE.targetSpecifier()).isEqualTo(SMGTargetSpecifier.IS_LAST_POINTER);
+        ValueAndSMGState ptrToZeroPlusAndSt =
+            currentState.readValueWithoutMaterialization(
+                readPTE.pointsTo(), nfo, pointerSizeInBits, CPointerType.POINTER_TO_VOID);
+        currentState = ptrToZeroPlusAndSt.getState();
+        Value ptrToZeroPlus = ptrToZeroPlusAndSt.getValue();
+        SMGPointsToEdge ptrToZeroPlusPTE =
+            currentState
+                .getMemoryModel()
+                .getSmg()
+                .getPTEdge(
+                    currentState.getMemoryModel().getSMGValueFromValue(ptrToZeroPlus).orElseThrow())
+                .orElseThrow();
+        assertThat(ptrToZeroPlusPTE.pointsTo()).isEqualTo(arrayPTE.pointsTo());
+        assertThat(ptrToZeroPlusPTE.targetSpecifier())
+            .isEqualTo(SMGTargetSpecifier.IS_FIRST_POINTER);
+      } else if (i + 1 < listLength) {
+        assertThat(readPointer).isEqualTo(pointersConcreteDifferentList[i + 1]);
+      }
+      if (i + 1 == listLength) {
+        prevPtr = lastNextPointer;
+      } else {
+        prevPtr = pointersConcreteDifferentList[i];
+      }
+
+      SMGObject notAbstractedListObj =
+          currentState
+              .dereferencePointerWithoutMaterilization(readPointer)
+              .orElseThrow()
+              .getSMGObject();
+      assertThat(notAbstractedListObj.isSLL()).isFalse();
+      assertThat(currentState.getMemoryModel().isObjectValid(notAbstractedListObj)).isTrue();
+      // Free current list segment
+      List<SMGState> newStatesAfterFree = currentState.free(prevPtr, null, null);
+      assertThat(newStatesAfterFree).hasSize(1);
+      currentState = newStatesAfterFree.getFirst();
+      notAbstractedListObj =
+          currentState
+              .dereferencePointerWithoutMaterilization(readPointer)
+              .orElseThrow()
+              .getSMGObject();
+      assertThat(currentState.getMemoryModel().isObjectValid(notAbstractedListObj)).isTrue();
+      notAbstractedListObj =
+          currentState
+              .dereferencePointerWithoutMaterilization(prevPtr)
+              .orElseThrow()
+              .getSMGObject();
+      assertThat(currentState.getMemoryModel().isObjectValid(notAbstractedListObj)).isFalse();
+      lastNextPointer = readPointer;
+    }
+    // Now we save the state for later
+    SMGState stateW1Left = currentState;
+    // Now read the next pointer (last), throw away the extra state, save pointer to new segment
+    // and free current pointer
+    // confirm that the last one is correct first
+    List<SMGStateAndOptionalSMGObjectAndOffset> deref =
+        currentState.dereferencePointer(lastNextPointer);
+    // Should only be 1 list element
+    assertThat(deref).hasSize(1);
+    currentState = deref.getFirst().getSMGState();
+    assertThat(deref.getFirst().hasSMGObjectAndOffset()).isTrue();
+    assertThat(((NumericValue) deref.getFirst().getOffsetForObject()).bigIntegerValue())
+        .isEqualTo(BigInteger.ZERO);
+    List<ValueAndSMGState> readNextsInLast =
+        evaluator.readValueWithPointerDereference(
+            currentState,
+            lastNextPointer,
+            new NumericValue(nfo),
+            pointerSizeInBits,
+            CPointerType.POINTER_TO_VOID);
+    // Should only be 1 list element
+    assertThat(readNextsInLast).hasSize(2);
+    // When materializing, the first element is the minimal element, confirm that the value is 0
+    assertThat(readNextsInLast.getFirst().getValue() instanceof NumericValue).isTrue();
+    assertThat(((NumericValue) readNextsInLast.getFirst().getValue()).bigIntegerValue())
+        .isEqualTo(BigInteger.ZERO);
+    // Confirm that the other is materialized correctly
+    currentState = readNextsInLast.get(1).getState();
+    Value readNextPointer = readNextsInLast.get(1).getValue();
+    SMGObject materializedList =
+        currentState
+            .dereferencePointerWithoutMaterilization(readNextPointer)
+            .orElseThrow()
+            .getSMGObject();
+    assertThat(materializedList.isSLL()).isFalse();
+    ValueAndSMGState pointerToZeroPlus =
+        currentState.readValueWithoutMaterialization(
+            materializedList, nfo, pointerSizeInBits, CPointerType.POINTER_TO_VOID);
+    assertThat(currentState.getMemoryModel().pointsToZeroPlus(pointerToZeroPlus.getValue()))
+        .isTrue();
+    // Now we free the list element from before
+    List<SMGState> freeList = currentState.free(lastNextPointer, null, null);
+    assertThat(freeList).hasSize(1);
+    currentState = freeList.getFirst();
+    // Compare the 2 states from before and now
+    assertThat(currentState.isLessOrEqual(stateW1Left)).isTrue();
+  }
+
+  /**
+   * We have a list, we check the next components' existence, then we move the current pointer to
+   * the next and free the prev segment. The resulting list should be covered by the previous.
+   */
+  @Ignore("TODO: fix test for non-abstraction of regions w pointers from outside the list")
+  @Test
+  public void testDLLPrevPointerFreeLoopEquality() throws CPAException, InterruptedException {
+    Value[] pointersConcreteDifferentList = buildConcreteList(true, dllSize, listLength);
+    SMGCPAAbstractionManager absFinder =
+        new SMGCPAAbstractionManager(currentState, listLength - 1, new SMGCPAStatistics());
+    currentState = absFinder.findAndAbstractLists();
+    // "free" list except for last segment
+    // We explicitly deref the current segment and read the next pointer beforehand
+    // runningListElementPointer == pointer to current list element
+    Value runningListElementPointer = pointersConcreteDifferentList[listLength - 1];
+    // previousListElementPtr == pointer to the list element pointing to runningListElementPointer
+    // via prev pointer. This pointer / list segment is to be freed.
+    Value previousListElementPtr;
+    for (int i = listLength - 1; i >= 0; i--) {
+      List<SMGStateAndOptionalSMGObjectAndOffset> currentDeref =
+          currentState.dereferencePointer(runningListElementPointer);
+
+      assertThat(currentState.getMemoryModel().getNestingLevel(pointersConcreteDifferentList[i]))
+          .isEqualTo(0);
+      assertThat(currentState.getMemoryModel().getNestingLevel(runningListElementPointer))
+          .isEqualTo(0);
+      // Should only be 1 list element
+      assertThat(currentDeref).hasSize(1);
+      currentState = currentDeref.getFirst().getSMGState();
+      assertThat(currentDeref.getFirst().hasSMGObjectAndOffset()).isTrue();
+      assertThat(((NumericValue) currentDeref.getFirst().getOffsetForObject()).bigIntegerValue())
+          .isEqualTo(BigInteger.ZERO);
+      // currentDeref is based on prev pointers, check that its equal to a deref of the external
+      // pointer at that location (except the first case)
+      if (i > 0) {
+        assertThat(
+                currentState.getMemoryModel().getNestingLevel(pointersConcreteDifferentList[i - 1]))
+            .isEqualTo(0);
+        List<SMGStateAndOptionalSMGObjectAndOffset> currentDerefFromExternal =
+            currentState.dereferencePointer(pointersConcreteDifferentList[i]);
+        SMGValue currentSMGPointerExternal =
+            currentState
+                .getMemoryModel()
+                .getSMGValueFromValue(pointersConcreteDifferentList[i])
+                .orElseThrow();
+        assertThat(currentState.getMemoryModel().getNestingLevel(pointersConcreteDifferentList[i]))
+            .isEqualTo(0);
+        assertThat(currentDerefFromExternal).hasSize(1);
+        currentState = currentDerefFromExternal.getFirst().getSMGState();
+        assertThat(currentDerefFromExternal.getFirst().hasSMGObjectAndOffset()).isTrue();
+        assertThat(
+                ((NumericValue) currentDerefFromExternal.getFirst().getOffsetForObject())
+                    .bigIntegerValue())
+            .isEqualTo(BigInteger.ZERO);
+        assertThat(currentDerefFromExternal.getFirst().getSMGObject())
+            .isEqualTo(currentDeref.getFirst().getSMGObject());
+        assertThat(
+                currentState
+                    .getMemoryModel()
+                    .getSmg()
+                    .getPTEdge(currentSMGPointerExternal)
+                    .orElseThrow()
+                    .targetSpecifier())
+            .isEqualTo(SMGTargetSpecifier.IS_REGION);
+      }
+
+      List<ValueAndSMGState> readPrevsOfCurrent =
+          evaluator.readValueWithPointerDereference(
+              currentState,
+              runningListElementPointer,
+              new NumericValue(pfo),
+              pointerSizeInBits,
+              CPointerType.POINTER_TO_VOID);
+
+      ValueAndSMGState readPrevPointerAndState;
+      if (i != 0) {
+        // Should only be 1 list element
+        assertThat(readPrevsOfCurrent).hasSize(1);
+        readPrevPointerAndState = readPrevsOfCurrent.getFirst();
+      } else {
+        assertThat(readPrevsOfCurrent).hasSize(2);
+        readPrevPointerAndState = readPrevsOfCurrent.get(1);
+        // We only want to take a look at the extended list
+      }
+      // We read the prev pointer pointing to an abstracted list, hence this list is materialized
+      currentState = readPrevPointerAndState.getState();
+      Value readPrevPointer = readPrevPointerAndState.getValue();
+      if (1 >= i) {
+        // Read pointer now points to the last of the original concrete elements
+        // As a result, the first pointer (pointersConcreteDifferentList[0]) points to 0+
+        // and the readPrevPointer to the object before
+        // first   currentDeref
+        //  v         v
+        // 0+   ->   CE -> CE
+        assertThat(readPrevPointer).isNotEqualTo(pointersConcreteDifferentList[0]);
+        SMGPointsToEdge readPrevPTE =
+            currentState
+                .getMemoryModel()
+                .getSmg()
+                .getPTEdge(
+                    currentState
+                        .getMemoryModel()
+                        .getSMGValueFromValue(readPrevPointer)
+                        .orElseThrow())
+                .orElseThrow();
+        SMGPointsToEdge firstPTE =
+            currentState
+                .getMemoryModel()
+                .getSmg()
+                .getPTEdge(
+                    currentState
+                        .getMemoryModel()
+                        .getSMGValueFromValue(pointersConcreteDifferentList[0])
+                        .orElseThrow())
+                .orElseThrow();
+        assertThat(readPrevPTE.pointsTo()).isNotEqualTo(firstPTE.pointsTo());
+        assertThat(readPrevPTE.targetSpecifier()).isEqualTo(SMGTargetSpecifier.IS_REGION);
+        assertThat(firstPTE.targetSpecifier()).isEqualTo(SMGTargetSpecifier.IS_FIRST_POINTER);
+        ValueAndSMGState readPtrToZeroPlusAndSt =
+            currentState.readValueWithoutMaterialization(
+                readPrevPTE.pointsTo(), pfo, pointerSizeInBits, CPointerType.POINTER_TO_VOID);
+        currentState = readPtrToZeroPlusAndSt.getState();
+        Value readPtrToZeroPlus = readPtrToZeroPlusAndSt.getValue();
+        SMGPointsToEdge readPtrToZeroPlusPTE =
+            currentState
+                .getMemoryModel()
+                .getSmg()
+                .getPTEdge(
+                    currentState
+                        .getMemoryModel()
+                        .getSMGValueFromValue(readPtrToZeroPlus)
+                        .orElseThrow())
+                .orElseThrow();
+        assertThat(readPtrToZeroPlusPTE.pointsTo()).isEqualTo(firstPTE.pointsTo());
+        assertThat(readPtrToZeroPlusPTE.targetSpecifier())
+            .isEqualTo(SMGTargetSpecifier.IS_LAST_POINTER);
+      } else {
+        assertThat(readPrevPointer).isEqualTo(pointersConcreteDifferentList[i - 1]);
+      }
+
+      previousListElementPtr = runningListElementPointer;
+      runningListElementPointer = readPrevPointer;
+
+      // Check that the new running list element is valid (the object behind prev of the element
+      // about to be freed)
+      SMGObject notAbstractedPrevListObj =
+          currentState
+              .dereferencePointerWithoutMaterilization(readPrevPointer)
+              .orElseThrow()
+              .getSMGObject();
+      assertThat(notAbstractedPrevListObj.isSLL()).isFalse();
+      assertThat(currentState.getMemoryModel().isObjectValid(notAbstractedPrevListObj)).isTrue();
+      // Free current list segment
+      List<SMGState> newStatesAfterFree = currentState.free(previousListElementPtr, null, null);
+      assertThat(newStatesAfterFree).hasSize(1);
+      currentState = newStatesAfterFree.getFirst();
+      // check that the prev from the just freed is still valid
+      notAbstractedPrevListObj =
+          currentState
+              .dereferencePointerWithoutMaterilization(readPrevPointer)
+              .orElseThrow()
+              .getSMGObject();
+      assertThat(currentState.getMemoryModel().isObjectValid(notAbstractedPrevListObj)).isTrue();
+      // Check that freed object is invalid
+      notAbstractedPrevListObj =
+          currentState
+              .dereferencePointerWithoutMaterilization(previousListElementPtr)
+              .orElseThrow()
+              .getSMGObject();
+      assertThat(currentState.getMemoryModel().isObjectValid(notAbstractedPrevListObj)).isFalse();
+    }
+    // Now we save the state for later
+    SMGState stateW1Left = currentState;
+    // confirm that the first pointer is correct first
+    List<SMGStateAndOptionalSMGObjectAndOffset> deref =
+        currentState.dereferencePointer(runningListElementPointer);
+    // Should only be 1 list element
+    assertThat(deref).hasSize(1);
+    currentState = deref.getFirst().getSMGState();
+    assertThat(deref.getFirst().hasSMGObjectAndOffset()).isTrue();
+    assertThat(((NumericValue) deref.getFirst().getOffsetForObject()).bigIntegerValue())
+        .isEqualTo(BigInteger.ZERO);
+    // Read prev of current list segment (reads into 0+, causes materialization)
+    List<ValueAndSMGState> readPrevsInLast =
+        evaluator.readValueWithPointerDereference(
+            currentState,
+            runningListElementPointer,
+            new NumericValue(pfo),
+            pointerSizeInBits,
+            CPointerType.POINTER_TO_VOID);
+    // Should only be 1 list element
+    assertThat(readPrevsInLast).hasSize(2);
+    // When materializing, the first element is the minimal element, confirm that the value is 0
+    assertThat(readPrevsInLast.getFirst().getValue() instanceof NumericValue).isTrue();
+    assertThat(((NumericValue) readPrevsInLast.getFirst().getValue()).bigIntegerValue())
+        .isEqualTo(BigInteger.ZERO);
+    // Confirm that the other is materialized correctly
+    currentState = readPrevsInLast.get(1).getState();
+    Value readPrevPointer = readPrevsInLast.get(1).getValue();
+    SMGObject newlyMaterializedListSegment =
+        currentState
+            .dereferencePointerWithoutMaterilization(readPrevPointer)
+            .orElseThrow()
+            .getSMGObject();
+    assertThat(newlyMaterializedListSegment.isSLL()).isFalse();
+    ValueAndSMGState pointerToZeroPlus =
+        currentState.readValueWithoutMaterialization(
+            newlyMaterializedListSegment, pfo, pointerSizeInBits, CPointerType.POINTER_TO_VOID);
+    assertThat(currentState.getMemoryModel().pointsToZeroPlus(pointerToZeroPlus.getValue()))
+        .isTrue();
+    // Now we free the list element from before
+    List<SMGState> freeList = currentState.free(runningListElementPointer, null, null);
+    assertThat(freeList).hasSize(1);
+    currentState = freeList.getFirst();
     // Compare the 2 states from before and now
     assertThat(currentState.isLessOrEqual(stateW1Left)).isTrue();
   }
