@@ -9,7 +9,6 @@
 package org.sosy_lab.cpachecker.cpa.smg2;
 
 import static com.google.common.truth.Truth.assertThat;
-import static com.google.common.truth.Truth8.assertThat;
 import static org.sosy_lab.common.collect.Collections3.transformedImmutableListCopy;
 
 import com.google.common.base.Preconditions;
@@ -26,7 +25,6 @@ import org.sosy_lab.common.configuration.Configuration;
 import org.sosy_lab.common.configuration.InvalidConfigurationException;
 import org.sosy_lab.common.log.LogManager;
 import org.sosy_lab.common.log.LogManagerWithoutDuplicates;
-import org.sosy_lab.cpachecker.cfa.DummyCFAEdge;
 import org.sosy_lab.cpachecker.cfa.ast.FileLocation;
 import org.sosy_lab.cpachecker.cfa.ast.c.CArraySubscriptExpression;
 import org.sosy_lab.cpachecker.cfa.ast.c.CBinaryExpression;
@@ -41,6 +39,9 @@ import org.sosy_lab.cpachecker.cfa.ast.c.CPointerExpression;
 import org.sosy_lab.cpachecker.cfa.ast.c.CSimpleDeclaration;
 import org.sosy_lab.cpachecker.cfa.ast.c.CUnaryExpression;
 import org.sosy_lab.cpachecker.cfa.ast.c.CVariableDeclaration;
+import org.sosy_lab.cpachecker.cfa.model.BlankEdge;
+import org.sosy_lab.cpachecker.cfa.model.CFAEdge;
+import org.sosy_lab.cpachecker.cfa.model.CFANode;
 import org.sosy_lab.cpachecker.cfa.types.MachineModel;
 import org.sosy_lab.cpachecker.cfa.types.c.CArrayType;
 import org.sosy_lab.cpachecker.cfa.types.c.CComplexType.ComplexTypeKind;
@@ -53,9 +54,10 @@ import org.sosy_lab.cpachecker.cfa.types.c.CPointerType;
 import org.sosy_lab.cpachecker.cfa.types.c.CSimpleType;
 import org.sosy_lab.cpachecker.cfa.types.c.CStorageClass;
 import org.sosy_lab.cpachecker.cfa.types.c.CType;
+import org.sosy_lab.cpachecker.cfa.types.c.CTypeQualifiers;
 import org.sosy_lab.cpachecker.core.AnalysisDirection;
 import org.sosy_lab.cpachecker.cpa.constraints.ConstraintsStatistics;
-import org.sosy_lab.cpachecker.cpa.smg2.constraint.SMGConstraintsSolver;
+import org.sosy_lab.cpachecker.cpa.constraints.domain.ConstraintsSolver;
 import org.sosy_lab.cpachecker.cpa.smg2.util.SMGException;
 import org.sosy_lab.cpachecker.cpa.smg2.util.SMGStateAndOptionalSMGObjectAndOffset;
 import org.sosy_lab.cpachecker.cpa.smg2.util.SMGValueAndSMGState;
@@ -66,16 +68,17 @@ import org.sosy_lab.cpachecker.cpa.value.symbolic.type.ConstantSymbolicExpressio
 import org.sosy_lab.cpachecker.cpa.value.symbolic.type.SymbolicValueFactory;
 import org.sosy_lab.cpachecker.cpa.value.type.NumericValue;
 import org.sosy_lab.cpachecker.cpa.value.type.Value;
-import org.sosy_lab.cpachecker.cpa.value.type.Value.UnknownValue;
 import org.sosy_lab.cpachecker.exceptions.CPATransferException;
 import org.sosy_lab.cpachecker.util.predicates.pathformula.ctoformula.CtoFormulaConverter;
+import org.sosy_lab.cpachecker.util.predicates.pathformula.pointeraliasing.CFormulaEncodingWithPointerAliasingOptions;
 import org.sosy_lab.cpachecker.util.predicates.pathformula.pointeraliasing.CToFormulaConverterWithPointerAliasing;
-import org.sosy_lab.cpachecker.util.predicates.pathformula.pointeraliasing.FormulaEncodingWithPointerAliasingOptions;
 import org.sosy_lab.cpachecker.util.predicates.pathformula.pointeraliasing.TypeHandlerWithPointerAliasing;
 import org.sosy_lab.cpachecker.util.predicates.smt.FormulaManagerView;
 import org.sosy_lab.cpachecker.util.predicates.smt.Solver;
 import org.sosy_lab.cpachecker.util.smg.graph.SMGObject;
+import org.sosy_lab.cpachecker.util.smg.graph.SMGTargetSpecifier;
 import org.sosy_lab.cpachecker.util.smg.graph.SMGValue;
+import org.sosy_lab.cpachecker.util.test.TestUtils;
 
 // TODO: run with more machine models
 /* Test all SMGCPAValueVisitor visits. Some will be tested indirectly, for example value creation. */
@@ -151,32 +154,36 @@ public class SMGCPAValueVisitorTest {
 
   private SMGOptions options;
 
+  private CFAEdge dummyCFAEdge =
+      new BlankEdge(
+          "dummy edge",
+          FileLocation.DUMMY,
+          CFANode.newDummyCFANode(),
+          CFANode.newDummyCFANode(),
+          "dummy for tests");
+
   @Before
   public void init() throws InvalidConfigurationException {
     logger = new LogManagerWithoutDuplicates(LogManager.createTestLogManager());
     Configuration defaultOptionsNoPreciseRead =
-        Configuration.builder()
-            .copyFrom(Configuration.defaultConfiguration())
-            .setOption("cpa.smg2.preciseSMGRead", "false")
-            .build();
-    options = new SMGOptions(defaultOptionsNoPreciseRead);
+        TestUtils.configurationForTest().setOption("cpa.smg2.preciseSMGRead", "false").build();
+    options = new SMGOptions(defaultOptionsNoPreciseRead, null);
 
     // null, null is fine as long as builtin functions are not used!
-    evaluator = new SMGCPAExpressionEvaluator(MACHINE_MODEL, logger, null, null, makeTestSolver());
+    evaluator =
+        new SMGCPAExpressionEvaluator(MACHINE_MODEL, logger, null, options, makeTestSolver());
 
-    currentState = SMGState.of(MACHINE_MODEL, logger, options, evaluator);
+    currentState = SMGState.of(MACHINE_MODEL, logger, options, evaluator, new SMGCPAStatistics());
 
-    visitor =
-        new SMGCPAValueVisitor(
-            evaluator, currentState, new DummyCFAEdge(null, null), logger, options);
+    visitor = new SMGCPAValueVisitor(evaluator, currentState, dummyCFAEdge, logger);
   }
 
-  private SMGConstraintsSolver makeTestSolver() throws InvalidConfigurationException {
-    Solver smtSolver =
-        Solver.create(Configuration.defaultConfiguration(), logger, ShutdownNotifier.createDummy());
+  private ConstraintsSolver makeTestSolver() throws InvalidConfigurationException {
+    Configuration config = TestUtils.configurationForTest().build();
+    Solver smtSolver = Solver.create(config, logger, ShutdownNotifier.createDummy());
     FormulaManagerView formulaManager = smtSolver.getFormulaManager();
-    FormulaEncodingWithPointerAliasingOptions formulaOptions =
-        new FormulaEncodingWithPointerAliasingOptions(Configuration.defaultConfiguration());
+    CFormulaEncodingWithPointerAliasingOptions formulaOptions =
+        new CFormulaEncodingWithPointerAliasingOptions(config);
     TypeHandlerWithPointerAliasing typeHandler =
         new TypeHandlerWithPointerAliasing(logger, MACHINE_MODEL, formulaOptions);
 
@@ -191,19 +198,21 @@ public class SMGCPAValueVisitorTest {
             typeHandler,
             AnalysisDirection.FORWARD);
 
-    return new SMGConstraintsSolver(
-        smtSolver, formulaManager, converter, new ConstraintsStatistics(), options);
+    return new ConstraintsSolver(
+        config, MACHINE_MODEL, smtSolver, formulaManager, converter, new ConstraintsStatistics());
   }
 
   // Resets state and visitor to an empty state
   public void resetSMGStateAndVisitor() throws InvalidConfigurationException {
     currentState =
         SMGState.of(
-            MACHINE_MODEL, logger, new SMGOptions(Configuration.defaultConfiguration()), evaluator);
+            MACHINE_MODEL,
+            logger,
+            new SMGOptions(TestUtils.configurationForTest().build(), null),
+            evaluator,
+            new SMGCPAStatistics());
 
-    visitor =
-        new SMGCPAValueVisitor(
-            evaluator, currentState, new DummyCFAEdge(null, null), logger, options);
+    visitor = new SMGCPAValueVisitor(evaluator, currentState, dummyCFAEdge, logger);
   }
 
   /*
@@ -221,9 +230,10 @@ public class SMGCPAValueVisitorTest {
               true,
               ComplexTypeKind.STRUCT);
 
-      // Create a Value that we want to be mapped to a SMGValue to write into the struct
+      // Create a Value that we want to be mapped to an SMGValue to write into the struct
       Value intValue = new NumericValue(i);
-      Value addressValue = new ConstantSymbolicExpression(new UnknownValue(), null);
+      // Addresses are not wrapped in consts
+      Value addressValue = SymbolicValueFactory.getInstance().newIdentifier(null);
 
       addHeapVariableToMemoryModel(
           0, getSizeInBitsForListOfCTypeWithPadding(STRUCT_UNION_TEST_TYPES), addressValue);
@@ -241,11 +251,11 @@ public class SMGCPAValueVisitorTest {
 
       // Assert the correct returns
       assertThat(resultList).hasSize(1);
-      Value resultValue = resultList.get(0).getValue();
+      Value resultValue = resultList.getFirst().getValue();
       // The returned Value should be the value we entered into the field,
       // which is a NumericValue = testNumericValue
       assertThat(resultValue).isInstanceOf(NumericValue.class);
-      assertThat(resultValue.asNumericValue().bigIntegerValue()).isEqualTo(BigInteger.valueOf(i));
+      assertThat(((NumericValue) resultValue).bigIntegerValue()).isEqualTo(BigInteger.valueOf(i));
 
       resetSMGStateAndVisitor();
     }
@@ -254,7 +264,7 @@ public class SMGCPAValueVisitorTest {
   /*
    * This tests the struct field read (*struct).field with pointers as values.
    * We test pointers of all types. We also fill the struct first completely and don't reset.
-   * The result should always be a AddressExpression with the correct address value and no offset.
+   * The result should always be an AddressExpression with the correct address value and no offset.
    */
   @Test
   public void readStructDerefWithPointerValuesTest()
@@ -267,6 +277,7 @@ public class SMGCPAValueVisitorTest {
     addStackVariableToMemoryModel(COMPOSITE_VARIABLE_NAME, POINTER_SIZE_IN_BITS);
     writeToStackVariableInMemoryModel(
         COMPOSITE_VARIABLE_NAME, 0, POINTER_SIZE_IN_BITS, addressOfStructValue);
+    assertThat(currentState.isPointer(addressOfStructValue)).isTrue();
 
     for (int i = 0; i < STRUCT_UNION_TEST_TYPES.size(); i++) {
       // Create a Value as address
@@ -274,7 +285,10 @@ public class SMGCPAValueVisitorTest {
 
       writeToHeapObjectByAddress(
           addressOfStructValue, i * POINTER_SIZE_IN_BITS, POINTER_SIZE_IN_BITS, addressValue);
+      // Make it a real pointer with some dummy target in the heap
+      addHeapVariableToMemoryModel(0, POINTER_SIZE_IN_BITS, addressValue);
 
+      assertThat(currentState.isPointer(addressValue)).isTrue();
       // remember the address for the index
       addresses.add(addressValue);
     }
@@ -288,21 +302,26 @@ public class SMGCPAValueVisitorTest {
                 COMPOSITE_VARIABLE_NAME,
                 i,
                 transformedImmutableListCopy(
-                    STRUCT_UNION_TEST_TYPES, n -> new CPointerType(false, false, n)));
+                    STRUCT_UNION_TEST_TYPES, n -> new CPointerType(CTypeQualifiers.NONE, n)));
 
         List<ValueAndSMGState> resultList = fieldRef.accept(visitor);
 
         // Assert the correct returns
         assertThat(resultList).hasSize(1);
-        Value resultValue = resultList.get(0).getValue();
+        Value resultValue = resultList.getFirst().getValue();
 
-        // The return should always be a AddressExpression with the address as memory address
+        // The return should be an AddressExpression with the address as memory address if it is a
+        // (non-numeric) pointer
         assertThat(resultValue).isInstanceOf(AddressExpression.class);
+        assertThat(((AddressExpression) resultValue).getMemoryAddress())
+            .isNotInstanceOf(NumericValue.class);
+        assertThat(currentState.isPointer(((AddressExpression) resultValue).getMemoryAddress()))
+            .isTrue();
         assertThat(((AddressExpression) resultValue).getMemoryAddress())
             .isEqualTo(addresses.get(i));
         // Offset is always 0 as there is no binary expr around them
-        assertThat(((AddressExpression) resultValue).getOffset().isNumericValue()).isTrue();
-        assertThat(((AddressExpression) resultValue).getOffset().asNumericValue().bigIntegerValue())
+        assertThat(((AddressExpression) resultValue).getOffset() instanceof NumericValue).isTrue();
+        assertThat(((NumericValue) ((AddressExpression) resultValue).getOffset()).bigIntegerValue())
             .isEqualTo(BigInteger.ZERO);
       }
     }
@@ -312,7 +331,7 @@ public class SMGCPAValueVisitorTest {
    * This tests the struct field read struct->field with pointers as values.
    * Struct is a pointer variable, pointing to the struct on the heap.
    * We test pointers of all types. We also fill the struct first completely and don't reset.
-   * The result should always be a AddressExpression with the correct address value and no offset.
+   * The result should always be an AddressExpression with the correct address value and no offset.
    */
   @Test
   public void readFieldDerefWithPointerValuesTest()
@@ -325,6 +344,7 @@ public class SMGCPAValueVisitorTest {
     addStackVariableToMemoryModel(COMPOSITE_VARIABLE_NAME, POINTER_SIZE_IN_BITS);
     writeToStackVariableInMemoryModel(
         COMPOSITE_VARIABLE_NAME, 0, POINTER_SIZE_IN_BITS, addressOfStructValue);
+    assertThat(currentState.isPointer(addressOfStructValue)).isTrue();
 
     for (int i = 0; i < STRUCT_UNION_TEST_TYPES.size(); i++) {
       // Create a Value as address
@@ -332,6 +352,11 @@ public class SMGCPAValueVisitorTest {
 
       writeToHeapObjectByAddress(
           addressOfStructValue, i * POINTER_SIZE_IN_BITS, POINTER_SIZE_IN_BITS, addressValue);
+
+      // Make it a real pointer with some dummy target in the heap
+      addHeapVariableToMemoryModel(0, POINTER_SIZE_IN_BITS, addressValue);
+
+      assertThat(currentState.isPointer(addressValue)).isTrue();
 
       // remember the address for the index
       addresses.add(addressValue);
@@ -346,7 +371,7 @@ public class SMGCPAValueVisitorTest {
                 COMPOSITE_VARIABLE_NAME,
                 i,
                 transformedImmutableListCopy(
-                    STRUCT_UNION_TEST_TYPES, n -> new CPointerType(false, false, n)),
+                    STRUCT_UNION_TEST_TYPES, n -> new CPointerType(CTypeQualifiers.NONE, n)),
                 true,
                 ComplexTypeKind.STRUCT);
 
@@ -354,15 +379,20 @@ public class SMGCPAValueVisitorTest {
 
         // Assert the correct returns
         assertThat(resultList).hasSize(1);
-        Value resultValue = resultList.get(0).getValue();
+        Value resultValue = resultList.getFirst().getValue();
 
-        // The return should always be a AddressExpression with the address as memory address
+        // The return should be an AddressExpression with the address as memory address if it is a
+        // (non-numeric) pointer
         assertThat(resultValue).isInstanceOf(AddressExpression.class);
+        assertThat(((AddressExpression) resultValue).getMemoryAddress())
+            .isNotInstanceOf(NumericValue.class);
+        assertThat(currentState.isPointer(((AddressExpression) resultValue).getMemoryAddress()))
+            .isTrue();
         assertThat(((AddressExpression) resultValue).getMemoryAddress())
             .isEqualTo(addresses.get(i));
         // Offset is always 0 as there is no binary expr around them
-        assertThat(((AddressExpression) resultValue).getOffset().isNumericValue()).isTrue();
-        assertThat(((AddressExpression) resultValue).getOffset().asNumericValue().bigIntegerValue())
+        assertThat(((AddressExpression) resultValue).getOffset() instanceof NumericValue).isTrue();
+        assertThat(((NumericValue) ((AddressExpression) resultValue).getOffset()).bigIntegerValue())
             .isEqualTo(BigInteger.ZERO);
       }
     }
@@ -371,10 +401,11 @@ public class SMGCPAValueVisitorTest {
   /*
    * This tests the struct field read struct.field with pointers as values.
    * The struct is on the stack. We test pointers of all types. We also fill the struct first completely and don't reset.
-   * The result should always be a AddressExpression with the correct address value and no offset.
+   * The result should always be an AddressExpression with the correct address value and no offset.
    */
   @Test
-  public void readFieldFromStackWithPointerValuesTest() throws CPATransferException {
+  public void readFieldFromStackWithPointerValuesTest()
+      throws CPATransferException, InvalidConfigurationException {
     List<Value> addresses = new ArrayList<>();
 
     addStackVariableToMemoryModel(
@@ -386,7 +417,10 @@ public class SMGCPAValueVisitorTest {
 
       writeToStackVariableInMemoryModel(
           COMPOSITE_VARIABLE_NAME, i * POINTER_SIZE_IN_BITS, POINTER_SIZE_IN_BITS, addressValue);
+      // Make it a real pointer with some dummy target in the heap
+      addHeapVariableToMemoryModel(0, POINTER_SIZE_IN_BITS, addressValue);
 
+      assertThat(currentState.isPointer(addressValue)).isTrue();
       // remember the address for the index
       addresses.add(addressValue);
     }
@@ -400,7 +434,7 @@ public class SMGCPAValueVisitorTest {
                 COMPOSITE_VARIABLE_NAME,
                 i,
                 transformedImmutableListCopy(
-                    STRUCT_UNION_TEST_TYPES, n -> new CPointerType(false, false, n)),
+                    STRUCT_UNION_TEST_TYPES, n -> new CPointerType(CTypeQualifiers.NONE, n)),
                 false,
                 ComplexTypeKind.STRUCT);
 
@@ -408,15 +442,20 @@ public class SMGCPAValueVisitorTest {
 
         // Assert the correct returns
         assertThat(resultList).hasSize(1);
-        Value resultValue = resultList.get(0).getValue();
+        Value resultValue = resultList.getFirst().getValue();
 
-        // The return should always be a AddressExpression with the address as memory address
+        // The return should be an AddressExpression with the address as memory address if it is a
+        // (non-numeric) pointer
         assertThat(resultValue).isInstanceOf(AddressExpression.class);
+        assertThat(((AddressExpression) resultValue).getMemoryAddress())
+            .isNotInstanceOf(NumericValue.class);
+        assertThat(currentState.isPointer(((AddressExpression) resultValue).getMemoryAddress()))
+            .isTrue();
         assertThat(((AddressExpression) resultValue).getMemoryAddress())
             .isEqualTo(addresses.get(i));
         // Offset is always 0 as there is no binary expr around them
-        assertThat(((AddressExpression) resultValue).getOffset().isNumericValue()).isTrue();
-        assertThat(((AddressExpression) resultValue).getOffset().asNumericValue().bigIntegerValue())
+        assertThat(((AddressExpression) resultValue).getOffset() instanceof NumericValue).isTrue();
+        assertThat(((NumericValue) ((AddressExpression) resultValue).getOffset()).bigIntegerValue())
             .isEqualTo(BigInteger.ZERO);
       }
     }
@@ -449,7 +488,7 @@ public class SMGCPAValueVisitorTest {
 
         // Assert the correct returns
         assertThat(resultList).hasSize(1);
-        Value resultValue = resultList.get(0).getValue();
+        Value resultValue = resultList.getFirst().getValue();
         // The returned Value should be the value we entered into the field,
         // which is a NumericValue = testNumericValue
         assertThat(resultValue).isInstanceOf(NumericValue.class);
@@ -463,9 +502,10 @@ public class SMGCPAValueVisitorTest {
   public void readFieldDerefPointerExplicitlyTest()
       throws InvalidConfigurationException, CPATransferException {
     for (int i = 0; i < STRUCT_UNION_TEST_TYPES.size(); i++) {
-      // Create a Value that we want to be mapped to a SMGValue to write into the struct
+      // Create a Value that we want to be mapped to an SMGValue to write into the struct
       Value intValue = new NumericValue(i);
-      Value addressValue = new ConstantSymbolicExpression(new UnknownValue(), null);
+      // Addresses are not wrapped in consts
+      Value addressValue = SymbolicValueFactory.getInstance().newIdentifier(null);
 
       addHeapVariableToMemoryModel(
           0, getSizeInBitsForListOfCTypeWithPadding(STRUCT_UNION_TEST_TYPES), addressValue);
@@ -487,11 +527,11 @@ public class SMGCPAValueVisitorTest {
 
       // Assert the correct returns
       assertThat(resultList).hasSize(1);
-      Value resultValue = resultList.get(0).getValue();
+      Value resultValue = resultList.getFirst().getValue();
       // The returned Value should be the value we entered into the field,
       // which is a NumericValue = testNumericValue
       assertThat(resultValue).isInstanceOf(NumericValue.class);
-      assertThat(resultValue.asNumericValue().bigIntegerValue()).isEqualTo(BigInteger.valueOf(i));
+      assertThat(((NumericValue) resultValue).bigIntegerValue()).isEqualTo(BigInteger.valueOf(i));
 
       resetSMGStateAndVisitor();
     }
@@ -504,7 +544,8 @@ public class SMGCPAValueVisitorTest {
   @Test
   public void readFieldDerefPointerExplicitlyRepeatedlyTest()
       throws InvalidConfigurationException, CPATransferException {
-    Value addressValue = new ConstantSymbolicExpression(new UnknownValue(), null);
+    // Addresses are not wrapped in consts
+    Value addressValue = SymbolicValueFactory.getInstance().newIdentifier(null);
 
     addHeapVariableToMemoryModel(
         0, getSizeInBitsForListOfCTypeWithPadding(STRUCT_UNION_TEST_TYPES), addressValue);
@@ -513,7 +554,7 @@ public class SMGCPAValueVisitorTest {
         COMPOSITE_VARIABLE_NAME, 0, POINTER_SIZE_IN_BITS, addressValue);
 
     for (int i = 0; i < STRUCT_UNION_TEST_TYPES.size(); i++) {
-      // Create a Value that we want to be mapped to a SMGValue to write into the struct
+      // Create a Value that we want to be mapped to an SMGValue to write into the struct
       Value intValue = new NumericValue(i);
 
       writeToHeapObjectByAddress(
@@ -533,11 +574,11 @@ public class SMGCPAValueVisitorTest {
 
         // Assert the correct returns
         assertThat(resultList).hasSize(1);
-        Value resultValue = resultList.get(0).getValue();
+        Value resultValue = resultList.getFirst().getValue();
         // The returned Value should be the value we entered into the field,
         // which is a NumericValue = testNumericValue
         assertThat(resultValue).isInstanceOf(NumericValue.class);
-        assertThat(resultValue.asNumericValue().bigIntegerValue()).isEqualTo(BigInteger.valueOf(i));
+        assertThat(((NumericValue) resultValue).bigIntegerValue()).isEqualTo(BigInteger.valueOf(i));
       }
     }
   }
@@ -559,7 +600,7 @@ public class SMGCPAValueVisitorTest {
               false,
               ComplexTypeKind.STRUCT);
 
-      // Create a Value that we want to be mapped to a SMGValue to write into the struct
+      // Create a Value that we want to be mapped to an SMGValue to write into the struct
       Value intValue = new NumericValue(i);
 
       // Now create the SMGState, SPC and SMG with the struct already present and values written to
@@ -577,11 +618,11 @@ public class SMGCPAValueVisitorTest {
 
       // Assert the correct returns
       assertThat(resultList).hasSize(1);
-      Value resultValue = resultList.get(0).getValue();
+      Value resultValue = resultList.getFirst().getValue();
       // The returned Value should be the value we entered into the field,
       // which is a NumericValue = testNumericValue
       assertThat(resultValue).isInstanceOf(NumericValue.class);
-      assertThat(resultValue.asNumericValue().bigIntegerValue()).isEqualTo(BigInteger.valueOf(i));
+      assertThat(((NumericValue) resultValue).bigIntegerValue()).isEqualTo(BigInteger.valueOf(i));
 
       resetSMGStateAndVisitor();
     }
@@ -612,11 +653,11 @@ public class SMGCPAValueVisitorTest {
 
         // Assert the correct returns
         assertThat(resultList).hasSize(1);
-        Value resultValue = resultList.get(0).getValue();
+        Value resultValue = resultList.getFirst().getValue();
         // The returned Value should be the value we entered into the field,
         // which is a NumericValue = testNumericValue
         assertThat(resultValue).isInstanceOf(NumericValue.class);
-        assertThat(resultValue.asNumericValue().bigIntegerValue()).isEqualTo(BigInteger.valueOf(i));
+        assertThat(((NumericValue) resultValue).bigIntegerValue()).isEqualTo(BigInteger.valueOf(i));
       }
     }
   }
@@ -634,7 +675,7 @@ public class SMGCPAValueVisitorTest {
    * Now read int, we read:
    * 0000 0001 0000 0000
    * which is 256 as an int
-   * Currently we read by type exactly and this means that we can only read types
+   * Currently, we read by type exactly and this means that we can only read types
    * with the exact size of the value last written. 0 always works!
    */
   @Test
@@ -666,10 +707,10 @@ public class SMGCPAValueVisitorTest {
 
         // Assert the correct returns
         assertThat(resultList).hasSize(1);
-        Value resultValue = resultList.get(0).getValue();
+        Value resultValue = resultList.getFirst().getValue();
         // Check that 0 always holds
         assertThat(resultValue).isInstanceOf(NumericValue.class);
-        assertThat(resultValue.asNumericValue().bigIntegerValue()).isEqualTo(BigInteger.ZERO);
+        assertThat(((NumericValue) resultValue).bigIntegerValue()).isEqualTo(BigInteger.ZERO);
       }
     }
   }
@@ -686,7 +727,7 @@ public class SMGCPAValueVisitorTest {
         COMPOSITE_VARIABLE_NAME, getLargestSizeInBitsForListOfCType(STRUCT_UNION_TEST_TYPES));
 
     for (int k = 0; k < STRUCT_UNION_TEST_TYPES.size(); k++) {
-      // Create a Value that we want to be mapped to a SMGValue to write into the struct
+      // Create a Value that we want to be mapped to an SMGValue to write into the struct
       Value intValue = new NumericValue(k + 1);
 
       // Write to the stack union; Note: this is always offset 0!
@@ -713,7 +754,7 @@ public class SMGCPAValueVisitorTest {
 
           // Assert the correct returns
           assertThat(resultList).hasSize(1);
-          Value resultValue = resultList.get(0).getValue();
+          Value resultValue = resultList.getFirst().getValue();
           // Check that types with the size of the current have the correct value, and all other
           // should be unknown
           if (MACHINE_MODEL
@@ -721,7 +762,7 @@ public class SMGCPAValueVisitorTest {
                   .compareTo(MACHINE_MODEL.getSizeof(STRUCT_UNION_TEST_TYPES.get(i)))
               == 0) {
             assertThat(resultValue).isInstanceOf(NumericValue.class);
-            assertThat(resultValue.asNumericValue().bigIntegerValue())
+            assertThat(((NumericValue) resultValue).bigIntegerValue())
                 .isEqualTo(BigInteger.valueOf(k + 1));
           } else {
             // Unknowns are tranlated into ConstantSymbolicExpression
@@ -760,7 +801,7 @@ public class SMGCPAValueVisitorTest {
 
           // Assert the correct return values depending on type
           assertThat(resultList).hasSize(1);
-          Value resultValue = resultList.get(0).getValue();
+          Value resultValue = resultList.getFirst().getValue();
           checkValue(currentArrayType, k, resultValue);
         }
       }
@@ -807,7 +848,7 @@ public class SMGCPAValueVisitorTest {
 
           // Assert the correct return values depending on type
           assertThat(resultList).hasSize(1);
-          Value resultValue = resultList.get(0).getValue();
+          Value resultValue = resultList.getFirst().getValue();
           checkValue(currentArrayType, k, resultValue);
         }
       }
@@ -843,7 +884,7 @@ public class SMGCPAValueVisitorTest {
 
           // Assert the correct return values depending on type
           assertThat(resultList).hasSize(1);
-          Value resultValue = resultList.get(0).getValue();
+          Value resultValue = resultList.getFirst().getValue();
           checkValue(currentArrayType, k, resultValue);
         }
       }
@@ -885,7 +926,7 @@ public class SMGCPAValueVisitorTest {
 
           // Assert the correct return values depending on type
           assertThat(resultList).hasSize(1);
-          Value resultValue = resultList.get(0).getValue();
+          Value resultValue = resultList.getFirst().getValue();
           checkValue(currentArrayType, k, resultValue);
         }
       }
@@ -917,7 +958,7 @@ public class SMGCPAValueVisitorTest {
 
       // Now write some distinct values into the array, for signed we want to test negatives!
       for (int k = 0; k < TEST_ARRAY_LENGTH; k++) {
-        // Create a Value that we want to be mapped to a SMGValue to write into the array depending
+        // Create a Value that we want to be mapped to an SMGValue to write into the array depending
         // on the type
         Value arrayValue = transformInputIntoValue(currentValueArrayType, k);
 
@@ -940,10 +981,11 @@ public class SMGCPAValueVisitorTest {
       // Note: we should reuse the pointer for index 0 from above, but I am lazy and it does not
       // matter in a test
       SMGObject objectForAddressValue =
-          currentState.dereferencePointer(addressValueArray).get(0).getSMGObject();
+          currentState.dereferencePointer(addressValueArray).getFirst().getSMGObject();
       for (int j = 0; j < TEST_ARRAY_LENGTH; j++) {
-        // We need a mapping from each value representing a address to a SMGValue that is mapped to
-        // a SMGPointsToEdge (modeling the pointer). We simply use numeric values for this. We
+        // We need a mapping from each value representing an address to an SMGValue that is mapped
+        // to
+        // an SMGPointsToEdge (modeling the pointer). We simply use numeric values for this. We
         // remember the pointer values such that the index is the same as the location of the
         // pointer in the array.
         Value address = addPointerToMemory(objectForAddressValue, j * sizeOfCurrentTypeInBits);
@@ -972,14 +1014,14 @@ public class SMGCPAValueVisitorTest {
               // Out of bounds
               List<ValueAndSMGState> visitedValuesAndStates = arrayPointerExpr.accept(visitor);
               assertThat(visitedValuesAndStates).hasSize(1);
-              ValueAndSMGState visitedValueAndState = visitedValuesAndStates.get(0);
+              ValueAndSMGState visitedValueAndState = visitedValuesAndStates.getFirst();
               // Error state + unknown value
               assertThat(visitedValueAndState.getValue())
                   .isEqualTo(Value.UnknownValue.getInstance());
               // There are 2 errors. 1 read and 1 write error. The read error is first however and
               // its the one we are interested in.
               assertThat(visitedValueAndState.getState().getErrorInfo()).hasSize(1);
-              SMGErrorInfo error = visitedValueAndState.getState().getErrorInfo().get(0);
+              SMGErrorInfo error = visitedValueAndState.getState().getErrorInfo().getFirst();
 
               assertThat(error.isInvalidRead()).isTrue();
             } else {
@@ -987,7 +1029,7 @@ public class SMGCPAValueVisitorTest {
 
               // Assert the correct return values depending on type
               assertThat(resultList).hasSize(1);
-              Value resultValue = resultList.get(0).getValue();
+              Value resultValue = resultList.getFirst().getValue();
               checkValue(currentValueArrayType, realIndex, resultValue);
             }
           }
@@ -1027,7 +1069,7 @@ public class SMGCPAValueVisitorTest {
 
           // Assert the correct return values depending on type
           assertThat(resultList).hasSize(1);
-          Value resultValue = resultList.get(0).getValue();
+          Value resultValue = resultList.getFirst().getValue();
           checkValue(currentArrayType, k, resultValue);
         }
       }
@@ -1059,7 +1101,7 @@ public class SMGCPAValueVisitorTest {
       writeToStackVariableInMemoryModel(arrayVariableName, 0, POINTER_SIZE_IN_BITS, addressValue);
       // Stack variable holding the address (the pointer) to the address of the array
       addStackVariableToMemoryModel(addressToAddressVariableName, POINTER_SIZE_IN_BITS);
-      // We need a mapping from addressForAddressValue to a SMGValue that is mapped to a
+      // We need a mapping from addressForAddressValue to an SMGValue that is mapped to a
       // SMGPointsToEdge (modeling the pointer)
       SMGObject objectForAddressValue =
           currentState.getMemoryModel().getStackFrames().peek().getVariable(arrayVariableName);
@@ -1070,7 +1112,7 @@ public class SMGCPAValueVisitorTest {
 
       // Now write some distinct values into the array, for signed we want to test negatives!
       for (int k = 0; k < TEST_ARRAY_LENGTH; k++) {
-        // Create a Value that we want to be mapped to a SMGValue to write into the array depending
+        // Create a Value that we want to be mapped to an SMGValue to write into the array depending
         // on the type
         Value arrayValue = transformInputIntoValue(currentArrayType, k);
 
@@ -1090,7 +1132,7 @@ public class SMGCPAValueVisitorTest {
 
           // Assert the correct return values depending on type
           assertThat(resultList).hasSize(1);
-          Value resultValue = resultList.get(0).getValue();
+          Value resultValue = resultList.getFirst().getValue();
           checkValue(currentArrayType, k, resultValue);
         }
       }
@@ -1130,7 +1172,7 @@ public class SMGCPAValueVisitorTest {
 
           // Assert the correct return values depending on type
           assertThat(resultList).hasSize(1);
-          Value resultValue = resultList.get(0).getValue();
+          Value resultValue = resultList.getFirst().getValue();
           checkValue(currentArrayType, k, resultValue);
         }
       }
@@ -1171,7 +1213,7 @@ public class SMGCPAValueVisitorTest {
 
           // Assert the correct return values depending on type
           assertThat(resultList).hasSize(1);
-          Value resultValue = resultList.get(0).getValue();
+          Value resultValue = resultList.getFirst().getValue();
           checkValue(currentArrayType, k, resultValue);
         }
       }
@@ -1207,7 +1249,7 @@ public class SMGCPAValueVisitorTest {
     for (CType currentArrayType : ARRAY_TEST_TYPES) {
       int sizeOfCurrentTypeInBits = MACHINE_MODEL.getSizeof(currentArrayType).intValue() * 8;
       // address to the heap where the array starts
-      Value addressValue = new ConstantSymbolicExpression(new UnknownValue(), null);
+      Value addressValue = SymbolicValueFactory.getInstance().newIdentifier(null);
       // Create the array on the heap; size is type size in bits * size of array
       addHeapVariableToMemoryModel(0, sizeOfCurrentTypeInBits * TEST_ARRAY_LENGTH, addressValue);
       // Stack variable holding the address (the pointer)
@@ -1217,7 +1259,7 @@ public class SMGCPAValueVisitorTest {
       // Now write some distinct values into the array, for signed we want to test negatives!
       // Also create pointers
       for (int k = 0; k < TEST_ARRAY_LENGTH; k++) {
-        // Create a Value that we want to be mapped to a SMGValue to write into the array depending
+        // Create a Value that we want to be mapped to an SMGValue to write into the array depending
         // on the type
         Value arrayValue = transformInputIntoValue(currentArrayType, k);
 
@@ -1276,7 +1318,7 @@ public class SMGCPAValueVisitorTest {
 
             // Assert the correct return values depending on type
             assertThat(resultList).hasSize(1);
-            Value resultValue = resultList.get(0).getValue();
+            Value resultValue = resultList.getFirst().getValue();
             checkValue(currentArrayType, pointerNum + index, resultValue);
           }
         }
@@ -1312,8 +1354,9 @@ public class SMGCPAValueVisitorTest {
     // We want to test the arrays for all basic types
     for (CType currentArrayType : ARRAY_TEST_TYPES) {
       int sizeOfCurrentTypeInBits = MACHINE_MODEL.getSizeof(currentArrayType).intValue() * 8;
-      // address to the heap where the array starts
-      Value addressValue = new ConstantSymbolicExpression(new UnknownValue(), null);
+      // Address to the heap where the array starts
+      // Addresses are not wrapped in consts
+      Value addressValue = SymbolicValueFactory.getInstance().newIdentifier(null);
       // Create the array on the heap; size is type size in bits * size of array
       addHeapVariableToMemoryModel(0, sizeOfCurrentTypeInBits * TEST_ARRAY_LENGTH, addressValue);
       // Stack variable holding the address (the pointer)
@@ -1377,13 +1420,13 @@ public class SMGCPAValueVisitorTest {
 
             List<ValueAndSMGState> visitedValuesAndStates = arrayPointerExpr.accept(visitor);
             assertThat(visitedValuesAndStates).hasSize(1);
-            ValueAndSMGState visitedValueAndState = visitedValuesAndStates.get(0);
+            ValueAndSMGState visitedValueAndState = visitedValuesAndStates.getFirst();
             // Error state + unknown value
             assertThat(visitedValueAndState.getValue()).isEqualTo(Value.UnknownValue.getInstance());
             // There are 2 errors. 1 read and 1 write error. The read error is first however and
             // it's the one we are interested in.
             assertThat(visitedValueAndState.getState().getErrorInfo()).hasSize(1);
-            SMGErrorInfo error = visitedValueAndState.getState().getErrorInfo().get(0);
+            SMGErrorInfo error = visitedValueAndState.getState().getErrorInfo().getFirst();
 
             assertThat(error.isInvalidRead()).isTrue();
 
@@ -1436,8 +1479,9 @@ public class SMGCPAValueVisitorTest {
     // We want to test the arrays for all basic types
     for (CType currentArrayType : ARRAY_TEST_TYPES) {
       int sizeOfCurrentTypeInBits = MACHINE_MODEL.getSizeof(currentArrayType).intValue() * 8;
-      // address to the heap where the array starts
-      Value addressValue = new ConstantSymbolicExpression(new UnknownValue(), null);
+      // Address to the heap where the array starts
+      // Addresses are not wrapped in consts
+      Value addressValue = SymbolicValueFactory.getInstance().newIdentifier(null);
       // Create the array on the heap; size is type size in bits * size of array
       addHeapVariableToMemoryModel(0, sizeOfCurrentTypeInBits * TEST_ARRAY_LENGTH, addressValue);
       // Stack variable holding the address (the pointer)
@@ -1447,7 +1491,7 @@ public class SMGCPAValueVisitorTest {
       // Now write some distinct values into the array, for signed we want to test negatives!
       // Also create pointers
       for (int k = 0; k < TEST_ARRAY_LENGTH; k++) {
-        // Create a Value that we want to be mapped to a SMGValue to write into the array depending
+        // Create a Value that we want to be mapped to an SMGValue to write into the array depending
         // on the type
         Value arrayValue = transformInputIntoValue(currentArrayType, k);
 
@@ -1509,7 +1553,7 @@ public class SMGCPAValueVisitorTest {
 
             // Assert the correct return values depending on type
             assertThat(resultList).hasSize(1);
-            Value resultValue = resultList.get(0).getValue();
+            Value resultValue = resultList.getFirst().getValue();
             checkValue(currentArrayType, pointerNum + index, resultValue);
           }
         }
@@ -1546,7 +1590,7 @@ public class SMGCPAValueVisitorTest {
 
       // Now write some distinct values into the array, for signed we want to test negatives!
       for (int k = 0; k < TEST_ARRAY_LENGTH; k++) {
-        // Create a Value that we want to be mapped to a SMGValue to write into the array depending
+        // Create a Value that we want to be mapped to an SMGValue to write into the array depending
         // on the type
         Value arrayValue = transformInputIntoValue(currentArrayType, k);
 
@@ -1576,7 +1620,7 @@ public class SMGCPAValueVisitorTest {
 
           // Assert the correct return values depending on type
           assertThat(resultList).hasSize(1);
-          Value resultValue = resultList.get(0).getValue();
+          Value resultValue = resultList.getFirst().getValue();
           checkValue(currentArrayType, k, resultValue);
         }
       }
@@ -1600,8 +1644,9 @@ public class SMGCPAValueVisitorTest {
     // We want to test the arrays for all basic types
     for (CType currentArrayType : ARRAY_TEST_TYPES) {
       int sizeOfCurrentTypeInBits = MACHINE_MODEL.getSizeof(currentArrayType).intValue() * 8;
-      // address to the heap where the array starts
-      Value addressValue = new ConstantSymbolicExpression(new UnknownValue(), null);
+      // Address to the heap where the array starts
+      // Addresses are not wrapped in consts
+      Value addressValue = SymbolicValueFactory.getInstance().newIdentifier(null);
       // Create the array on the heap; size is type size in bits * size of array
       addHeapVariableToMemoryModel(0, sizeOfCurrentTypeInBits * TEST_ARRAY_LENGTH, addressValue);
       // Stack variable holding the address (the pointer)
@@ -1631,9 +1676,9 @@ public class SMGCPAValueVisitorTest {
 
           // Assert the correct return values depending on type
           assertThat(resultList).hasSize(1);
-          Value resultValue = resultList.get(0).getValue();
-          assertThat(resultValue.isNumericValue()).isTrue();
-          assertThat(resultValue.asNumericValue().longValue()).isEqualTo(j - k);
+          Value resultValue = resultList.getFirst().getValue();
+          assertThat(resultValue instanceof NumericValue).isTrue();
+          assertThat(((NumericValue) resultValue).longValue()).isEqualTo(j - k);
         }
       }
       // Reset memory model
@@ -1673,10 +1718,10 @@ public class SMGCPAValueVisitorTest {
         List<ValueAndSMGState> result = castExpression.accept(visitor);
         // Chars are translated into their numeric values by the value analysis
         // Also, the numeric value is max 255, therefore every datatype should be able to hold that!
-        Value value = result.get(0).getValue();
+        Value value = result.getFirst().getValue();
 
         assertThat(value).isInstanceOf(NumericValue.class);
-        assertThat(value.asNumericValue().bigIntegerValue())
+        assertThat(((NumericValue) value).bigIntegerValue())
             .isEqualTo(convertToType(BigInteger.valueOf(testChar), typeToTest));
       }
     }
@@ -1713,11 +1758,11 @@ public class SMGCPAValueVisitorTest {
         List<ValueAndSMGState> result = castExpression.accept(visitor);
         // Chars are translated into their numeric values by the value analysis
         // Also, the numeric value is max 255, therefore every datatype should be able to hold that!
-        Value value = result.get(0).getValue();
+        Value value = result.getFirst().getValue();
 
         assertThat(value).isInstanceOf(NumericValue.class);
         // Check the returned value. It should be == for all except char
-        assertThat(value.asNumericValue().bigIntegerValue())
+        assertThat(((NumericValue) value).bigIntegerValue())
             .isEqualTo(convertToType(BigInteger.valueOf(testValue), typeToTest));
       }
     }
@@ -1754,11 +1799,11 @@ public class SMGCPAValueVisitorTest {
         List<ValueAndSMGState> result = castExpression.accept(visitor);
         // Chars are translated into their numeric values by the value analysis
         // Also, the numeric value is max 255, therefore every datatype should be able to hold that!
-        Value value = result.get(0).getValue();
+        Value value = result.getFirst().getValue();
 
         assertThat(value).isInstanceOf(NumericValue.class);
         // Check the returned value. It should be == for all except char
-        assertThat(value.asNumericValue().bigIntegerValue())
+        assertThat(((NumericValue) value).bigIntegerValue())
             .isEqualTo(convertToType(BigInteger.valueOf(testValue), typeToTest));
       }
     }
@@ -1795,11 +1840,11 @@ public class SMGCPAValueVisitorTest {
         List<ValueAndSMGState> result = castExpression.accept(visitor);
         // Chars are translated into their numeric values by the value analysis
         // Also, the numeric value is max 255, therefore every datatype should be able to hold that!
-        Value value = result.get(0).getValue();
+        Value value = result.getFirst().getValue();
 
         assertThat(value).isInstanceOf(NumericValue.class);
         // Check the returned value. It should be == for all except char
-        assertThat(value.asNumericValue().bigIntegerValue())
+        assertThat(((NumericValue) value).bigIntegerValue())
             .isEqualTo(convertToType(BigInteger.valueOf(testValue), typeToTest));
       }
     }
@@ -1841,11 +1886,11 @@ public class SMGCPAValueVisitorTest {
         List<ValueAndSMGState> result = castExpression.accept(visitor);
         // Chars are translated into their numeric values by the value analysis
         // Also, the numeric value is max 255, therefore every datatype should be able to hold that!
-        Value value = result.get(0).getValue();
+        Value value = result.getFirst().getValue();
 
         assertThat(value).isInstanceOf(NumericValue.class);
         // Check the returned value. It should be == for all except char
-        assertThat(value.asNumericValue().bigIntegerValue())
+        assertThat(((NumericValue) value).bigIntegerValue())
             .isEqualTo(convertToType(testValue, typeToTest));
       }
     }
@@ -1882,11 +1927,11 @@ public class SMGCPAValueVisitorTest {
         List<ValueAndSMGState> result = castExpression.accept(visitor);
         // Chars are translated into their numeric values by the value analysis
         // Also, the numeric value is max 255, therefore every datatype should be able to hold that!
-        Value value = result.get(0).getValue();
+        Value value = result.getFirst().getValue();
 
         assertThat(value).isInstanceOf(NumericValue.class);
         // Check the returned value. It should be == for all except char
-        assertThat(value.asNumericValue().bigIntegerValue())
+        assertThat(((NumericValue) value).bigIntegerValue())
             .isEqualTo(convertToType(BigInteger.valueOf(testValue), typeToTest));
       }
     }
@@ -1928,11 +1973,11 @@ public class SMGCPAValueVisitorTest {
         List<ValueAndSMGState> result = castExpression.accept(visitor);
         // Chars are translated into their numeric values by the value analysis
         // Also, the numeric value is max 255, therefore every datatype should be able to hold that!
-        Value value = result.get(0).getValue();
+        Value value = result.getFirst().getValue();
 
         assertThat(value).isInstanceOf(NumericValue.class);
         // Check the returned value. It should be == for all except char
-        assertThat(value.asNumericValue().bigIntegerValue())
+        assertThat(((NumericValue) value).bigIntegerValue())
             .isEqualTo(convertToType(testValue, typeToTest));
       }
     }
@@ -1971,7 +2016,7 @@ public class SMGCPAValueVisitorTest {
               variableName + "NotQual",
               variableName + "NotQual",
               variableName + typeToTest,
-              CDefaults.forType(typeToTest, FileLocation.DUMMY));
+              CDefaults.forType(MACHINE_MODEL, typeToTest, FileLocation.DUMMY));
 
       CUnaryExpression amperVar = wrapInAmper(new CIdExpression(FileLocation.DUMMY, decl));
 
@@ -1979,34 +2024,28 @@ public class SMGCPAValueVisitorTest {
 
       // Assert the correct returns
       assertThat(resultList).hasSize(1);
-      Value resultValue = resultList.get(0).getValue();
-      assertThat(((AddressExpression) resultValue).getOffset().isNumericValue()).isTrue();
-      assertThat(((AddressExpression) resultValue).getOffset().asNumericValue().bigIntegerValue())
+      Value resultValue = resultList.getFirst().getValue();
+      assertThat(((AddressExpression) resultValue).getOffset() instanceof NumericValue).isTrue();
+      assertThat(((NumericValue) ((AddressExpression) resultValue).getOffset()).bigIntegerValue())
           .isEqualTo(BigInteger.ZERO);
       resultValue = ((AddressExpression) resultValue).getMemoryAddress();
       // & actually changes the state!
-      currentState = resultList.get(0).getState();
+      currentState = resultList.getFirst().getState();
 
       SMGObject expectedTarget =
           currentState
               .getMemoryModel()
               .getObjectForVisibleVariable(variableName + typeToTest)
               .orElseThrow();
-      BigInteger expectedOffset = BigInteger.ZERO;
+      Value expectedOffset = new NumericValue(BigInteger.ZERO);
       // The returned Value is an address, theoretically addresses may be any Value type
       assertThat(resultValue).isInstanceOf(Value.class);
       // First check general existance of a points to edge, then its target and offset
-      assertThat(currentState.dereferencePointer(resultValue).get(0).hasSMGObjectAndOffset())
+      assertThat(currentState.dereferencePointer(resultValue).getFirst().hasSMGObjectAndOffset())
           .isTrue();
-      assertThat(currentState.dereferencePointer(resultValue).get(0).getSMGObject())
+      assertThat(currentState.dereferencePointer(resultValue).getFirst().getSMGObject())
           .isEqualTo(expectedTarget);
-      assertThat(
-              currentState
-                  .dereferencePointer(resultValue)
-                  .get(0)
-                  .getOffsetForObject()
-                  .asNumericValue()
-                  .bigIntegerValue())
+      assertThat(currentState.dereferencePointer(resultValue).getFirst().getOffsetForObject())
           .isEqualTo(expectedOffset);
       // Check that the other methods return the correct points-to-edge leading to the correct
       // memory location and never to the 0 object
@@ -2054,34 +2093,28 @@ public class SMGCPAValueVisitorTest {
 
       // Assert the correct returns
       assertThat(resultList).hasSize(1);
-      Value resultValue = resultList.get(0).getValue();
-      assertThat(((AddressExpression) resultValue).getOffset().isNumericValue()).isTrue();
-      assertThat(((AddressExpression) resultValue).getOffset().asNumericValue().bigIntegerValue())
+      Value resultValue = resultList.getFirst().getValue();
+      assertThat(((AddressExpression) resultValue).getOffset() instanceof NumericValue).isTrue();
+      assertThat(((NumericValue) ((AddressExpression) resultValue).getOffset()).bigIntegerValue())
           .isEqualTo(BigInteger.ZERO);
       resultValue = ((AddressExpression) resultValue).getMemoryAddress();
       // & actually changes the state!
-      currentState = resultList.get(0).getState();
+      currentState = resultList.getFirst().getState();
 
       SMGObject expectedTarget =
           currentState
               .getMemoryModel()
               .getObjectForVisibleVariable(arrayVariableName)
               .orElseThrow();
-      BigInteger expectedOffset = BigInteger.ZERO;
+      Value expectedOffset = new NumericValue(BigInteger.ZERO);
       // The returned Value is an address, theoretically addresses may be any Value type
       assertThat(resultValue).isInstanceOf(Value.class);
       // First check general existance of a points to edge, then its target and offset
-      assertThat(currentState.dereferencePointer(resultValue).get(0).hasSMGObjectAndOffset())
+      assertThat(currentState.dereferencePointer(resultValue).getFirst().hasSMGObjectAndOffset())
           .isTrue();
-      assertThat(currentState.dereferencePointer(resultValue).get(0).getSMGObject())
+      assertThat(currentState.dereferencePointer(resultValue).getFirst().getSMGObject())
           .isEqualTo(expectedTarget);
-      assertThat(
-              currentState
-                  .dereferencePointer(resultValue)
-                  .get(0)
-                  .getOffsetForObject()
-                  .asNumericValue()
-                  .bigIntegerValue())
+      assertThat(currentState.dereferencePointer(resultValue).getFirst().getOffsetForObject())
           .isEqualTo(expectedOffset);
       // Check that the other methods return the correct points-to-edge leading to the correct
       // memory location and never to the 0 object
@@ -2139,32 +2172,26 @@ public class SMGCPAValueVisitorTest {
 
         // Assert the correct returns
         assertThat(resultList).hasSize(1);
-        Value resultValue = resultList.get(0).getValue();
-        assertThat(((AddressExpression) resultValue).getOffset().isNumericValue()).isTrue();
-        assertThat(((AddressExpression) resultValue).getOffset().asNumericValue().bigIntegerValue())
+        Value resultValue = resultList.getFirst().getValue();
+        assertThat(((AddressExpression) resultValue).getOffset() instanceof NumericValue).isTrue();
+        assertThat(((NumericValue) ((AddressExpression) resultValue).getOffset()).bigIntegerValue())
             .isEqualTo(BigInteger.ZERO);
         resultValue = ((AddressExpression) resultValue).getMemoryAddress();
         // & actually changes the state!
-        currentState = resultList.get(0).getState();
+        currentState = resultList.getFirst().getState();
 
         SMGObject expectedTarget =
-            currentState.dereferencePointer(heapAddress).get(0).getSMGObject();
-        BigInteger expectedOffset =
-            BigInteger.valueOf(currentIndice).multiply(sizeOfCurrentTypeInBits);
+            currentState.dereferencePointer(heapAddress).getFirst().getSMGObject();
+        Value expectedOffset =
+            new NumericValue(BigInteger.valueOf(currentIndice).multiply(sizeOfCurrentTypeInBits));
         // The returned Value is an address, theoretically addresses may be any Value type
         assertThat(resultValue).isInstanceOf(Value.class);
         // First check general existance of a points to edge, then its target and offset
-        assertThat(currentState.dereferencePointer(resultValue).get(0).hasSMGObjectAndOffset())
+        assertThat(currentState.dereferencePointer(resultValue).getFirst().hasSMGObjectAndOffset())
             .isTrue();
-        assertThat(currentState.dereferencePointer(resultValue).get(0).getSMGObject())
+        assertThat(currentState.dereferencePointer(resultValue).getFirst().getSMGObject())
             .isEqualTo(expectedTarget);
-        assertThat(
-                currentState
-                    .dereferencePointer(resultValue)
-                    .get(0)
-                    .getOffsetForObject()
-                    .asNumericValue()
-                    .bigIntegerValue())
+        assertThat(currentState.dereferencePointer(resultValue).getFirst().getOffsetForObject())
             .isEqualTo(expectedOffset);
         // Check that the other methods return the correct points-to-edge leading to the correct
         // memory location and never to the 0 object
@@ -2219,32 +2246,26 @@ public class SMGCPAValueVisitorTest {
 
         // Assert the correct returns
         assertThat(resultList).hasSize(1);
-        Value resultValue = resultList.get(0).getValue();
-        assertThat(((AddressExpression) resultValue).getOffset().isNumericValue()).isTrue();
-        assertThat(((AddressExpression) resultValue).getOffset().asNumericValue().bigIntegerValue())
+        Value resultValue = resultList.getFirst().getValue();
+        assertThat(((AddressExpression) resultValue).getOffset() instanceof NumericValue).isTrue();
+        assertThat(((NumericValue) ((AddressExpression) resultValue).getOffset()).bigIntegerValue())
             .isEqualTo(BigInteger.ZERO);
         resultValue = ((AddressExpression) resultValue).getMemoryAddress();
         // & actually changes the state!
-        currentState = resultList.get(0).getState();
+        currentState = resultList.getFirst().getState();
 
         SMGObject expectedTarget =
-            currentState.dereferencePointer(heapAddress).get(0).getSMGObject();
-        BigInteger expectedOffset =
-            BigInteger.valueOf(currentIndice).multiply(sizeOfCurrentTypeInBits);
+            currentState.dereferencePointer(heapAddress).getFirst().getSMGObject();
+        Value expectedOffset =
+            new NumericValue(BigInteger.valueOf(currentIndice).multiply(sizeOfCurrentTypeInBits));
         // The returned Value is an address, theoretically addresses may be any Value type
         assertThat(resultValue).isInstanceOf(Value.class);
         // First check general existance of a points to edge, then its target and offset
-        assertThat(currentState.dereferencePointer(resultValue).get(0).hasSMGObjectAndOffset())
+        assertThat(currentState.dereferencePointer(resultValue).getFirst().hasSMGObjectAndOffset())
             .isTrue();
-        assertThat(currentState.dereferencePointer(resultValue).get(0).getSMGObject())
+        assertThat(currentState.dereferencePointer(resultValue).getFirst().getSMGObject())
             .isEqualTo(expectedTarget);
-        assertThat(
-                currentState
-                    .dereferencePointer(resultValue)
-                    .get(0)
-                    .getOffsetForObject()
-                    .asNumericValue()
-                    .bigIntegerValue())
+        assertThat(currentState.dereferencePointer(resultValue).getFirst().getOffsetForObject())
             .isEqualTo(expectedOffset);
         // Check that the other methods return the correct points-to-edge leading to the correct
         // memory location and never to the 0 object
@@ -2298,34 +2319,28 @@ public class SMGCPAValueVisitorTest {
 
       // Assert the correct returns
       assertThat(resultList).hasSize(1);
-      Value resultValue = resultList.get(0).getValue();
-      assertThat(((AddressExpression) resultValue).getOffset().isNumericValue()).isTrue();
-      assertThat(((AddressExpression) resultValue).getOffset().asNumericValue().bigIntegerValue())
+      Value resultValue = resultList.getFirst().getValue();
+      assertThat(((AddressExpression) resultValue).getOffset() instanceof NumericValue).isTrue();
+      assertThat(((NumericValue) ((AddressExpression) resultValue).getOffset()).bigIntegerValue())
           .isEqualTo(BigInteger.ZERO);
       resultValue = ((AddressExpression) resultValue).getMemoryAddress();
       // & actually changes the state!
-      currentState = resultList.get(0).getState();
+      currentState = resultList.getFirst().getState();
 
       SMGObject expectedTarget =
           currentState
               .getMemoryModel()
               .getObjectForVisibleVariable(COMPOSITE_VARIABLE_NAME + j)
               .orElseThrow();
-      BigInteger expectedOffset = BigInteger.ZERO;
+      Value expectedOffset = new NumericValue(BigInteger.ZERO);
       // The returned Value is an address, theoretically addresses may be any Value type
       assertThat(resultValue).isInstanceOf(Value.class);
       // First check general existance of a points to edge, then its target and offset
-      assertThat(currentState.dereferencePointer(resultValue).get(0).hasSMGObjectAndOffset())
+      assertThat(currentState.dereferencePointer(resultValue).getFirst().hasSMGObjectAndOffset())
           .isTrue();
-      assertThat(currentState.dereferencePointer(resultValue).get(0).getSMGObject())
+      assertThat(currentState.dereferencePointer(resultValue).getFirst().getSMGObject())
           .isEqualTo(expectedTarget);
-      assertThat(
-              currentState
-                  .dereferencePointer(resultValue)
-                  .get(0)
-                  .getOffsetForObject()
-                  .asNumericValue()
-                  .bigIntegerValue())
+      assertThat(currentState.dereferencePointer(resultValue).getFirst().getOffsetForObject())
           .isEqualTo(expectedOffset);
       // Check that the other methods return the correct points-to-edge leading to the correct
       // memory location and never to the 0 object
@@ -2375,13 +2390,13 @@ public class SMGCPAValueVisitorTest {
 
       // Assert the correct returns
       assertThat(resultList).hasSize(1);
-      Value resultValue = resultList.get(0).getValue();
-      assertThat(((AddressExpression) resultValue).getOffset().isNumericValue()).isTrue();
-      assertThat(((AddressExpression) resultValue).getOffset().asNumericValue().bigIntegerValue())
+      Value resultValue = resultList.getFirst().getValue();
+      assertThat(((AddressExpression) resultValue).getOffset() instanceof NumericValue).isTrue();
+      assertThat(((NumericValue) ((AddressExpression) resultValue).getOffset()).bigIntegerValue())
           .isEqualTo(BigInteger.ZERO);
       resultValue = ((AddressExpression) resultValue).getMemoryAddress();
       // & actually changes the state!
-      currentState = resultList.get(0).getState();
+      currentState = resultList.getFirst().getState();
 
       // We want the address of the address to the struct!
       SMGObject expectedTarget =
@@ -2389,16 +2404,15 @@ public class SMGCPAValueVisitorTest {
               .getMemoryModel()
               .getObjectForVisibleVariable(COMPOSITE_VARIABLE_NAME + j)
               .orElseThrow();
-      BigInteger expectedOffset = BigInteger.ZERO;
+      Value expectedOffset = new NumericValue(BigInteger.ZERO);
       // The returned Value is an address, theoretically addresses may be any Value type
       assertThat(resultValue).isInstanceOf(Value.class);
       // First check general existance of a points to edge, then its target and offset
       SMGStateAndOptionalSMGObjectAndOffset resultMaybeTarget =
-          currentState.dereferencePointer(resultValue).get(0);
+          currentState.dereferencePointer(resultValue).getFirst();
       assertThat(resultMaybeTarget.hasSMGObjectAndOffset()).isTrue();
       assertThat(resultMaybeTarget.getSMGObject()).isEqualTo(expectedTarget);
-      assertThat(resultMaybeTarget.getOffsetForObject().asNumericValue().bigIntegerValue())
-          .isEqualTo(expectedOffset);
+      assertThat(resultMaybeTarget.getOffsetForObject()).isEqualTo(expectedOffset);
       // Check that the other methods return the correct points-to-edge leading to the correct
       // memory location and never to the 0 object
       assertThat(currentState.getPointsToTarget(resultValue).orElseThrow().getSMGObject())
@@ -2453,32 +2467,26 @@ public class SMGCPAValueVisitorTest {
 
         // Assert the correct returns
         assertThat(resultList).hasSize(1);
-        Value resultValue = resultList.get(0).getValue();
-        assertThat(((AddressExpression) resultValue).getOffset().isNumericValue()).isTrue();
-        assertThat(((AddressExpression) resultValue).getOffset().asNumericValue().bigIntegerValue())
+        Value resultValue = resultList.getFirst().getValue();
+        assertThat(((AddressExpression) resultValue).getOffset() instanceof NumericValue).isTrue();
+        assertThat(((NumericValue) ((AddressExpression) resultValue).getOffset()).bigIntegerValue())
             .isEqualTo(BigInteger.ZERO);
         resultValue = ((AddressExpression) resultValue).getMemoryAddress();
         // & actually changes the state!
-        currentState = resultList.get(0).getState();
+        currentState = resultList.getFirst().getState();
 
         SMGObject expectedTarget =
-            currentState.dereferencePointer(addressForHeap).get(0).getSMGObject();
-        BigInteger expectedOffset =
-            BigInteger.valueOf(getOffsetInBitsWithPadding(listOfTypes, indice));
+            currentState.dereferencePointer(addressForHeap).getFirst().getSMGObject();
+        Value expectedOffset =
+            new NumericValue(BigInteger.valueOf(getOffsetInBitsWithPadding(listOfTypes, indice)));
         // The returned Value is an address, theoretically addresses may be any Value type
         assertThat(resultValue).isInstanceOf(Value.class);
         // First check general existance of a points to edge, then its target and offset
-        assertThat(currentState.dereferencePointer(resultValue).get(0).hasSMGObjectAndOffset())
+        assertThat(currentState.dereferencePointer(resultValue).getFirst().hasSMGObjectAndOffset())
             .isTrue();
-        assertThat(currentState.dereferencePointer(resultValue).get(0).getSMGObject())
+        assertThat(currentState.dereferencePointer(resultValue).getFirst().getSMGObject())
             .isEqualTo(expectedTarget);
-        assertThat(
-                currentState
-                    .dereferencePointer(resultValue)
-                    .get(0)
-                    .getOffsetForObject()
-                    .asNumericValue()
-                    .bigIntegerValue())
+        assertThat(currentState.dereferencePointer(resultValue).getFirst().getOffsetForObject())
             .isEqualTo(expectedOffset);
         // Check that the other methods return the correct points-to-edge leading to the correct
         // memory location and never to the 0 object
@@ -2533,35 +2541,29 @@ public class SMGCPAValueVisitorTest {
 
         // Assert the correct returns
         assertThat(resultList).hasSize(1);
-        Value resultValue = resultList.get(0).getValue();
-        assertThat(((AddressExpression) resultValue).getOffset().isNumericValue()).isTrue();
-        assertThat(((AddressExpression) resultValue).getOffset().asNumericValue().bigIntegerValue())
+        Value resultValue = resultList.getFirst().getValue();
+        assertThat(((AddressExpression) resultValue).getOffset() instanceof NumericValue).isTrue();
+        assertThat(((NumericValue) ((AddressExpression) resultValue).getOffset()).bigIntegerValue())
             .isEqualTo(BigInteger.ZERO);
         resultValue = ((AddressExpression) resultValue).getMemoryAddress();
         // & actually changes the state!
-        currentState = resultList.get(0).getState();
+        currentState = resultList.getFirst().getState();
 
         SMGObject expectedTarget =
             currentState
                 .getMemoryModel()
                 .getObjectForVisibleVariable(COMPOSITE_VARIABLE_NAME + j)
                 .orElseThrow();
-        BigInteger expectedOffset =
-            BigInteger.valueOf(getOffsetInBitsWithPadding(listOfTypes, indice));
+        Value expectedOffset =
+            new NumericValue(BigInteger.valueOf(getOffsetInBitsWithPadding(listOfTypes, indice)));
         // The returned Value is an address, theoretically addresses may be any Value type
         assertThat(resultValue).isInstanceOf(Value.class);
         // First check general existance of a points to edge, then its target and offset
-        assertThat(currentState.dereferencePointer(resultValue).get(0).hasSMGObjectAndOffset())
+        assertThat(currentState.dereferencePointer(resultValue).getFirst().hasSMGObjectAndOffset())
             .isTrue();
-        assertThat(currentState.dereferencePointer(resultValue).get(0).getSMGObject())
+        assertThat(currentState.dereferencePointer(resultValue).getFirst().getSMGObject())
             .isEqualTo(expectedTarget);
-        assertThat(
-                currentState
-                    .dereferencePointer(resultValue)
-                    .get(0)
-                    .getOffsetForObject()
-                    .asNumericValue()
-                    .bigIntegerValue())
+        assertThat(currentState.dereferencePointer(resultValue).getFirst().getOffsetForObject())
             .isEqualTo(expectedOffset);
         // Check that the other methods return the correct points-to-edge leading to the correct
         // memory location and never to the 0 object
@@ -2615,7 +2617,7 @@ public class SMGCPAValueVisitorTest {
               variableName + "NotQual",
               variableName + "NotQual",
               variableName,
-              CDefaults.forType(typeToTest, FileLocation.DUMMY));
+              CDefaults.forType(MACHINE_MODEL, typeToTest, FileLocation.DUMMY));
 
       CUnaryExpression sizeOfVar = wrapInSizeof(new CIdExpression(FileLocation.DUMMY, decl));
 
@@ -2623,11 +2625,11 @@ public class SMGCPAValueVisitorTest {
 
       // Assert the correct returns
       assertThat(resultList).hasSize(1);
-      Value resultValue = resultList.get(0).getValue();
+      Value resultValue = resultList.getFirst().getValue();
       // The returned Value should == size if the current type by index (in bytes)
       assertThat(resultValue).isInstanceOf(NumericValue.class);
       // Both as bytes
-      assertThat(resultValue.asNumericValue().bigIntegerValue())
+      assertThat(((NumericValue) resultValue).bigIntegerValue())
           .isEqualTo(MACHINE_MODEL.getSizeof(typeToTest));
       resetSMGStateAndVisitor();
     }
@@ -2660,11 +2662,11 @@ public class SMGCPAValueVisitorTest {
 
         // Assert the correct returns
         assertThat(resultList).hasSize(1);
-        Value resultValue = resultList.get(0).getValue();
+        Value resultValue = resultList.getFirst().getValue();
         // The returned Value should == size if the current type by index (in bytes)
         assertThat(resultValue).isInstanceOf(NumericValue.class);
         // Both as bytes
-        assertThat(resultValue.asNumericValue().bigIntegerValue())
+        assertThat(((NumericValue) resultValue).bigIntegerValue())
             .isEqualTo(MACHINE_MODEL.getSizeof(listOfTypes.get(i)));
       }
       // Test sizeof the entire struct
@@ -2681,11 +2683,11 @@ public class SMGCPAValueVisitorTest {
 
       // Assert the correct returns
       assertThat(resultList).hasSize(1);
-      Value resultValue = resultList.get(0).getValue();
+      Value resultValue = resultList.getFirst().getValue();
       // The returned Value should == size of the entire struct but with padding
       assertThat(resultValue).isInstanceOf(NumericValue.class);
       // Transform the result in bits
-      assertThat(resultValue.asNumericValue().bigIntegerValue().multiply(BigInteger.valueOf(8)))
+      assertThat(((NumericValue) resultValue).bigIntegerValue().multiply(BigInteger.valueOf(8)))
           .isEqualTo(BigInteger.valueOf(getSizeInBitsForListOfCTypeWithPadding(listOfTypes)));
       resetSMGStateAndVisitor();
     }
@@ -2704,7 +2706,7 @@ public class SMGCPAValueVisitorTest {
 
       // Write every possible values once
       for (int i = 0; i < j; i++) {
-        // Create a Value that we want to be mapped to a SMGValue to write into the union
+        // Create a Value that we want to be mapped to an SMGValue to write into the union
         Value intValue = new NumericValue(j);
 
         // Write to the stack union; Note: this is always offset 0!
@@ -2731,11 +2733,11 @@ public class SMGCPAValueVisitorTest {
 
           // Assert the correct returns
           assertThat(resultList).hasSize(1);
-          Value resultValue = resultList.get(0).getValue();
+          Value resultValue = resultList.getFirst().getValue();
           // The returned Value should == size of the current type (at index i)
           assertThat(resultValue).isInstanceOf(NumericValue.class);
           // Transform the result in bits
-          assertThat(resultValue.asNumericValue().bigIntegerValue())
+          assertThat(((NumericValue) resultValue).bigIntegerValue())
               .isEqualTo(MACHINE_MODEL.getSizeof(listOfTypes.get(k)));
         }
 
@@ -2753,11 +2755,11 @@ public class SMGCPAValueVisitorTest {
 
         // Assert the correct returns
         assertThat(resultList).hasSize(1);
-        Value resultValue = resultList.get(0).getValue();
+        Value resultValue = resultList.getFirst().getValue();
         // The returned Value should == size of the entire struct but with padding
         assertThat(resultValue).isInstanceOf(NumericValue.class);
         // Transform the result in bits
-        assertThat(resultValue.asNumericValue().bigIntegerValue().multiply(BigInteger.valueOf(8)))
+        assertThat(((NumericValue) resultValue).bigIntegerValue().multiply(BigInteger.valueOf(8)))
             .isEqualTo(BigInteger.valueOf(getLargestSizeInBitsForListOfCType(listOfTypes)));
       }
       resetSMGStateAndVisitor();
@@ -2785,11 +2787,11 @@ public class SMGCPAValueVisitorTest {
 
         // Assert the correct returns
         assertThat(resultList).hasSize(1);
-        Value resultValue = resultList.get(0).getValue();
+        Value resultValue = resultList.getFirst().getValue();
         // The returned Value should == size of the current type (at index i)
         assertThat(resultValue).isInstanceOf(NumericValue.class);
         // Transform the result in bits
-        assertThat(resultValue.asNumericValue().bigIntegerValue())
+        assertThat(((NumericValue) resultValue).bigIntegerValue())
             .isEqualTo(MACHINE_MODEL.getSizeof(currentTestType));
       }
 
@@ -2801,11 +2803,11 @@ public class SMGCPAValueVisitorTest {
 
       // Assert the correct returns
       assertThat(resultList).hasSize(1);
-      Value resultValue = resultList.get(0).getValue();
+      Value resultValue = resultList.getFirst().getValue();
       // The returned Value should == size of the current type (at index i)
       assertThat(resultValue).isInstanceOf(NumericValue.class);
       // Transform the result in bits
-      assertThat(resultValue.asNumericValue().bigIntegerValue().intValue())
+      assertThat(((NumericValue) resultValue).bigIntegerValue().intValue())
           .isEqualTo(POINTER_SIZE_IN_BITS / 8);
 
       resetSMGStateAndVisitor();
@@ -2835,11 +2837,11 @@ public class SMGCPAValueVisitorTest {
 
         // Assert the correct returns
         assertThat(resultList).hasSize(1);
-        Value resultValue = resultList.get(0).getValue();
+        Value resultValue = resultList.getFirst().getValue();
         // The returned Value should == size of the current type (at index i)
         assertThat(resultValue).isInstanceOf(NumericValue.class);
         // Transform the result in bits
-        assertThat(resultValue.asNumericValue().bigIntegerValue())
+        assertThat(((NumericValue) resultValue).bigIntegerValue())
             .isEqualTo(MACHINE_MODEL.getSizeof(currentTestType));
       }
 
@@ -2854,11 +2856,11 @@ public class SMGCPAValueVisitorTest {
 
       // Assert the correct returns
       assertThat(resultList).hasSize(1);
-      Value resultValue = resultList.get(0).getValue();
+      Value resultValue = resultList.getFirst().getValue();
       // The returned Value should == size of the current type (at index i)
       assertThat(resultValue).isInstanceOf(NumericValue.class);
       // Transform the result in bits
-      assertThat(resultValue.asNumericValue().bigIntegerValue().intValue())
+      assertThat(((NumericValue) resultValue).bigIntegerValue().intValue())
           .isEqualTo(POINTER_SIZE_IN_BITS / 8);
 
       resetSMGStateAndVisitor();
@@ -2889,11 +2891,11 @@ public class SMGCPAValueVisitorTest {
 
         // Assert the correct returns
         assertThat(resultList).hasSize(1);
-        Value resultValue = resultList.get(0).getValue();
+        Value resultValue = resultList.getFirst().getValue();
         // The returned Value should == size of the current type (at index i)
         assertThat(resultValue).isInstanceOf(NumericValue.class);
         // Transform the result in bits
-        assertThat(resultValue.asNumericValue().bigIntegerValue())
+        assertThat(((NumericValue) resultValue).bigIntegerValue())
             .isEqualTo(MACHINE_MODEL.getSizeof(currentTestType));
       }
 
@@ -2915,7 +2917,7 @@ public class SMGCPAValueVisitorTest {
    */
   private CUnaryExpression wrapInAmper(CExpression exprToWrap) {
     CType typeOfExpr = exprToWrap.getExpressionType();
-    CType newType = new CPointerType(false, false, typeOfExpr);
+    CType newType = new CPointerType(CTypeQualifiers.NONE, typeOfExpr);
     return new CUnaryExpression(
         FileLocation.DUMMY, newType, exprToWrap, CUnaryExpression.UnaryOperator.AMPER);
   }
@@ -2976,10 +2978,11 @@ public class SMGCPAValueVisitorTest {
     List<CCompositeTypeMemberDeclaration> members = builder.build();
 
     CCompositeType structType =
-        new CCompositeType(false, false, ComplexTypeKind.STRUCT, members, "someName", "someName");
+        new CCompositeType(
+            CTypeQualifiers.NONE, ComplexTypeKind.STRUCT, members, "someName", "someName");
     CElaboratedType elaboratedType =
         new CElaboratedType(
-            false, false, ComplexTypeKind.STRUCT, "someName", "someName", structType);
+            CTypeQualifiers.NONE, ComplexTypeKind.STRUCT, "someName", "someName", structType);
     return MACHINE_MODEL.getSizeofInBits(elaboratedType).intValue();
   }
 
@@ -3048,7 +3051,7 @@ public class SMGCPAValueVisitorTest {
         variableName, getSizeInBitsForListOfCTypeWithPadding(testTypesList));
 
     for (int i = 0; i < testTypesList.size(); i++) {
-      // Create a Value that we want to be mapped to a SMGValue to write into the struct
+      // Create a Value that we want to be mapped to an SMGValue to write into the struct
       Value intValue = new NumericValue(i);
 
       // Write to the stack var
@@ -3069,13 +3072,14 @@ public class SMGCPAValueVisitorTest {
     List<CCompositeTypeMemberDeclaration> members = builder.build();
 
     CCompositeType structType =
-        new CCompositeType(false, false, ComplexTypeKind.STRUCT, members, structName, structName);
+        new CCompositeType(
+            CTypeQualifiers.NONE, ComplexTypeKind.STRUCT, members, structName, structName);
 
     CElaboratedType elaboratedType =
         new CElaboratedType(
-            false, false, ComplexTypeKind.STRUCT, structName, structName, structType);
+            CTypeQualifiers.NONE, ComplexTypeKind.STRUCT, structName, structName, structType);
 
-    CPointerType structPointerType = new CPointerType(false, false, elaboratedType);
+    CPointerType structPointerType = new CPointerType(CTypeQualifiers.NONE, elaboratedType);
 
     CSimpleDeclaration declararation =
         new CVariableDeclaration(
@@ -3086,7 +3090,7 @@ public class SMGCPAValueVisitorTest {
             variableName + "NotQual",
             variableName + "NotQual",
             variableName,
-            CDefaults.forType(structPointerType, FileLocation.DUMMY));
+            CDefaults.forType(MACHINE_MODEL, structPointerType, FileLocation.DUMMY));
 
     CIdExpression structVarExpr = new CIdExpression(FileLocation.DUMMY, declararation);
 
@@ -3140,12 +3144,13 @@ public class SMGCPAValueVisitorTest {
     List<CCompositeTypeMemberDeclaration> members = builder.build();
 
     CCompositeType structType =
-        new CCompositeType(false, false, structOrUnion, members, structName, structName);
+        new CCompositeType(CTypeQualifiers.NONE, structOrUnion, members, structName, structName);
 
     CElaboratedType elaboratedType =
-        new CElaboratedType(false, false, structOrUnion, structName, structName, structType);
+        new CElaboratedType(
+            CTypeQualifiers.NONE, structOrUnion, structName, structName, structType);
 
-    CPointerType structPointerType = new CPointerType(false, false, elaboratedType);
+    CPointerType structPointerType = new CPointerType(CTypeQualifiers.NONE, elaboratedType);
 
     CSimpleDeclaration declararation;
 
@@ -3159,7 +3164,7 @@ public class SMGCPAValueVisitorTest {
               variableName + "NotQual",
               variableName + "NotQual",
               variableName,
-              CDefaults.forType(structPointerType, FileLocation.DUMMY));
+              CDefaults.forType(MACHINE_MODEL, structPointerType, FileLocation.DUMMY));
     } else {
       declararation =
           new CVariableDeclaration(
@@ -3170,7 +3175,7 @@ public class SMGCPAValueVisitorTest {
               variableName + "NotQual",
               variableName + "NotQual",
               variableName,
-              CDefaults.forType(elaboratedType, FileLocation.DUMMY));
+              CDefaults.forType(MACHINE_MODEL, elaboratedType, FileLocation.DUMMY));
     }
 
     return new CIdExpression(FileLocation.DUMMY, declararation);
@@ -3230,7 +3235,7 @@ public class SMGCPAValueVisitorTest {
 
     // Now write some distinct values into the array, for signed we want to test negatives!
     for (int k = 0; k < TEST_ARRAY_LENGTH; k++) {
-      // Create a Value that we want to be mapped to a SMGValue to write into the array depending
+      // Create a Value that we want to be mapped to an SMGValue to write into the array depending
       // on the type
       Value arrayValue = transformInputIntoValue(arrayElementType, k);
 
@@ -3265,7 +3270,7 @@ public class SMGCPAValueVisitorTest {
     // Fill struct completely
     for (int i = 0; i < listOfTypes.size(); i++) {
       CType currentType = listOfTypes.get(i);
-      // Create a Value that we want to be mapped to a SMGValue to write into the struct
+      // Create a Value that we want to be mapped to an SMGValue to write into the struct
       Value intValue = transformInputIntoValue(currentType, i);
       // write the value into the struct on the heap
       writeToHeapObjectByAddress(
@@ -3278,7 +3283,7 @@ public class SMGCPAValueVisitorTest {
   }
 
   /*
-   * Creates a array on the heap with TEST_ARRAY_LENGTH entries filled via
+   * Creates an array on the heap with TEST_ARRAY_LENGTH entries filled via
    * transformInputIntoValue() by indice position with the type entered and the
    * stack variable accessable via the String that is pointing to the array on the heap.
    * Check return value with checkValue()!
@@ -3298,7 +3303,7 @@ public class SMGCPAValueVisitorTest {
 
     // Now write some distinct values into the array, for signed we want to test negatives!
     for (int k = 0; k < TEST_ARRAY_LENGTH; k++) {
-      // Create a Value that we want to be mapped to a SMGValue to write into the array depending
+      // Create a Value that we want to be mapped to an SMGValue to write into the array depending
       // on the type
       Value arrayValue = transformInputIntoValue(currentArrayType, k);
 
@@ -3337,11 +3342,11 @@ public class SMGCPAValueVisitorTest {
       currentState = currentState.copyAndAddStackFrame(CFunctionDeclaration.DUMMY);
     }
 
-    currentState = currentState.copyAndAddLocalVariable(sizeInBits, variableName, null);
+    currentState =
+        currentState.copyAndAddLocalVariable(
+            new NumericValue(BigInteger.valueOf(sizeInBits)), variableName, null);
 
-    visitor =
-        new SMGCPAValueVisitor(
-            evaluator, currentState, new DummyCFAEdge(null, null), logger, options);
+    visitor = new SMGCPAValueVisitor(evaluator, currentState, dummyCFAEdge, logger);
   }
 
   /*
@@ -3349,14 +3354,17 @@ public class SMGCPAValueVisitorTest {
    * This expects the stack var to be present! Updates the visitor.
    */
   private void writeToStackVariableInMemoryModel(
-      String stackVariableName, int writeOffsetInBits, int writeSizeInBits, Value valueToWrite) {
+      String stackVariableName, int writeOffsetInBits, int writeSizeInBits, Value valueToWrite)
+      throws SMGException {
+    CType dummyType = CPointerType.POINTER_TO_VOID;
     if (valueToWrite instanceof AddressExpression) {
-      ValueAndSMGState valueToWriteAndState = currentState.transformAddressExpression(valueToWrite);
+      ValueAndSMGState valueToWriteAndState =
+          currentState.transformAddressExpression(valueToWrite, dummyType);
       valueToWrite = valueToWriteAndState.getValue();
       currentState = valueToWriteAndState.getState();
     }
     Preconditions.checkArgument(!(valueToWrite instanceof AddressExpression));
-    SMGValueAndSMGState valueAndState = currentState.copyAndAddValue(valueToWrite);
+    SMGValueAndSMGState valueAndState = currentState.copyAndAddValue(valueToWrite, dummyType);
     SMGValue smgValue = valueAndState.getSMGValue();
     currentState = valueAndState.getSMGState();
     currentState =
@@ -3369,15 +3377,13 @@ public class SMGCPAValueVisitorTest {
             BigInteger.valueOf(writeSizeInBits),
             smgValue);
 
-    visitor =
-        new SMGCPAValueVisitor(
-            evaluator, currentState, new DummyCFAEdge(null, null), logger, options);
+    visitor = new SMGCPAValueVisitor(evaluator, currentState, dummyCFAEdge, logger);
   }
 
   /**
-   * Creates a SMGObject of the entered size. Then creates a pointer (points to edge) to it at the
-   * offset entered. Then the pointer is mapped to a SMGValue that is mapped to the entered value as
-   * address value. The global state and visitor are updated with the new items.
+   * Creates an SMGObject of the entered size. Then creates a pointer (points to edge) to it at the
+   * offset entered. Then the pointer is mapped to an SMGValue that is mapped to the entered value
+   * as address value. The global state and visitor are updated with the new items.
    *
    * @param offset in bits of the pointer. Essentially where the pointer starts in the object.
    * @param size of the object in bits.
@@ -3388,20 +3394,24 @@ public class SMGCPAValueVisitorTest {
       throws InvalidConfigurationException {
     SymbolicProgramConfiguration spc = currentState.getMemoryModel();
 
-    SMGObject smgHeapObject = SMGObject.of(0, BigInteger.valueOf(size), BigInteger.valueOf(0));
+    SMGObject smgHeapObject =
+        SMGObject.of(0, new NumericValue(BigInteger.valueOf(size)), BigInteger.valueOf(0));
     spc = spc.copyAndAddHeapObject(smgHeapObject);
 
-    // Mapping to the smg points to edge
+    // Mapping to the SMG points to edge
     spc =
-        spc.copyAndAddPointerFromAddressToRegion(
-            addressValue, smgHeapObject, BigInteger.valueOf(offset));
+        spc.copyAndAddPointerFromAddressToMemory(
+            addressValue,
+            smgHeapObject,
+            CPointerType.POINTER_TO_VOID,
+            new NumericValue(BigInteger.valueOf(offset)),
+            0,
+            SMGTargetSpecifier.IS_REGION);
 
     // This state now has the stack variable that is the pointer to the struct and the struct with a
     // value in the second int, and none in the first
     currentState = currentState.copyAndReplaceMemoryModel(spc);
-    visitor =
-        new SMGCPAValueVisitor(
-            evaluator, currentState, new DummyCFAEdge(null, null), logger, options);
+    visitor = new SMGCPAValueVisitor(evaluator, currentState, dummyCFAEdge, logger);
   }
 
   /**
@@ -3411,14 +3421,12 @@ public class SMGCPAValueVisitorTest {
    */
   private Value addPointerToMemory(SMGObject pTarget, int offset)
       throws InvalidConfigurationException {
-
+    CType dummyType = CPointerType.POINTER_TO_VOID;
     ValueAndSMGState addressAndState =
-        currentState.searchOrCreateAddress(pTarget, BigInteger.valueOf(offset));
+        currentState.searchOrCreateAddress(pTarget, dummyType, BigInteger.valueOf(offset));
 
     currentState = addressAndState.getState();
-    visitor =
-        new SMGCPAValueVisitor(
-            evaluator, currentState, new DummyCFAEdge(null, null), logger, options);
+    visitor = new SMGCPAValueVisitor(evaluator, currentState, dummyCFAEdge, logger);
     return addressAndState.getValue();
   }
 
@@ -3427,21 +3435,21 @@ public class SMGCPAValueVisitorTest {
     // Get the pte for the objects 0 position via the original malloc pointer (always the value in
     // the addressExpr)
     SMGStateAndOptionalSMGObjectAndOffset objectAndOffset =
-        currentState.dereferencePointer(addressOfTargetWith0Offset).get(0);
+        currentState.dereferencePointer(addressOfTargetWith0Offset).getFirst();
     Preconditions.checkArgument(
-        objectAndOffset.getOffsetForObject().asNumericValue().longValue() == 0);
+        ((NumericValue) objectAndOffset.getOffsetForObject()).longValue() == 0);
 
-    // Mapping to the smg points to edge
+    // Mapping to the SMG points to edge
     ValueAndSMGState newPointerValueAndState =
         currentState.searchOrCreateAddress(
-            objectAndOffset.getSMGObject(), BigInteger.valueOf(offset));
+            objectAndOffset.getSMGObject(),
+            CPointerType.POINTER_TO_VOID,
+            BigInteger.valueOf(offset));
     currentState = newPointerValueAndState.getState();
 
     // This state now has the stack variable that is the pointer to the struct and the struct with a
     // value in the second int, and none in the first
-    visitor =
-        new SMGCPAValueVisitor(
-            evaluator, currentState, new DummyCFAEdge(null, null), logger, options);
+    visitor = new SMGCPAValueVisitor(evaluator, currentState, dummyCFAEdge, logger);
     return newPointerValueAndState.getValue();
   }
 
@@ -3461,8 +3469,9 @@ public class SMGCPAValueVisitorTest {
       throws SMGException {
     SymbolicProgramConfiguration spc = currentState.getMemoryModel();
     SMGStateAndOptionalSMGObjectAndOffset targetAndOffset =
-        currentState.dereferencePointer(addressValue).get(0);
-    spc = spc.copyAndCreateValue(valueToWrite);
+        currentState.dereferencePointer(addressValue).getFirst();
+    CType dummyType = CPointerType.POINTER_TO_VOID;
+    spc = spc.copyAndCreateValue(valueToWrite, dummyType);
     spc =
         spc.writeValue(
             targetAndOffset.getSMGObject(),
@@ -3471,9 +3480,7 @@ public class SMGCPAValueVisitorTest {
             spc.getSMGValueFromValue(valueToWrite).orElseThrow());
 
     currentState = currentState.copyAndReplaceMemoryModel(spc);
-    visitor =
-        new SMGCPAValueVisitor(
-            evaluator, currentState, new DummyCFAEdge(null, null), logger, options);
+    visitor = new SMGCPAValueVisitor(evaluator, currentState, dummyCFAEdge, logger);
   }
 
   /**
@@ -3507,7 +3514,7 @@ public class SMGCPAValueVisitorTest {
     CInitializerList initializerList = new CInitializerList(FileLocation.DUMMY, builder.build());
      */
 
-    CArrayType arrayType = new CArrayType(false, false, elementType, length);
+    CArrayType arrayType = new CArrayType(CTypeQualifiers.NONE, elementType, length);
 
     // initializer = null because we model values/memory using the SMG!
     CVariableDeclaration declararation =
@@ -3526,7 +3533,7 @@ public class SMGCPAValueVisitorTest {
   }
 
   /**
-   * Access an array thats on the stack via subscript. The index used is also a variable on the
+   * Access an array that's on the stack via subscript. The index used is also a variable on the
    * stack. Example: array[index]
    *
    * @param arrayVariableName qualified name of the array on the stack.
@@ -3546,7 +3553,7 @@ public class SMGCPAValueVisitorTest {
     CIntegerLiteralExpression length =
         new CIntegerLiteralExpression(FileLocation.DUMMY, INT_TYPE, BigInteger.valueOf(lengthInt));
 
-    CArrayType arrayType = new CArrayType(false, false, elementType, length);
+    CArrayType arrayType = new CArrayType(CTypeQualifiers.NONE, elementType, length);
 
     // initializer = null because we model values/memory using the SMG!
     CVariableDeclaration arrayDeclararation =
@@ -3592,7 +3599,7 @@ public class SMGCPAValueVisitorTest {
         new CIntegerLiteralExpression(
             FileLocation.DUMMY, INT_TYPE, BigInteger.valueOf(subscriptIndexInt));
 
-    CPointerType pointerType = new CPointerType(false, false, elementType);
+    CPointerType pointerType = new CPointerType(CTypeQualifiers.NONE, elementType);
 
     // initializer = null because we model values/memory using the SMG!
     CVariableDeclaration declararation =
@@ -3622,7 +3629,7 @@ public class SMGCPAValueVisitorTest {
    */
   public CArraySubscriptExpression arraySubscriptHeapAccessWithVariable(
       String variableName, String indexVariableName, CType indexVariableType, CType elementType) {
-    CPointerType pointerType = new CPointerType(false, false, elementType);
+    CPointerType pointerType = new CPointerType(CTypeQualifiers.NONE, elementType);
 
     // initializer = null because we model values/memory using the SMG!
     CVariableDeclaration arrayDeclararation =
@@ -3668,10 +3675,10 @@ public class SMGCPAValueVisitorTest {
             FileLocation.DUMMY, INT_TYPE, BigInteger.valueOf(Math.abs(arrayIndiceInt)));
 
     // The type for the returned value after the pointer
-    CPointerType cPointerReturnType = new CPointerType(false, false, elementType);
+    CPointerType cPointerReturnType = new CPointerType(CTypeQualifiers.NONE, elementType);
     // The type for the returned value after the binary expr
     // TODO: why the f does this change?
-    CPointerType cPointerBinaryOperType = new CPointerType(false, false, elementType);
+    CPointerType cPointerBinaryOperType = new CPointerType(CTypeQualifiers.NONE, elementType);
 
     // initializer = null because we model values/memory using the SMG!
     CVariableDeclaration idDeclararation =
@@ -3727,7 +3734,7 @@ public class SMGCPAValueVisitorTest {
   public CPointerExpression pointerWithBinaryAccessFromExpression(
       String variableName, CType elementType, int innerIndiceInt, int outerindiceInt) {
     // The type for the returned value after the pointer
-    CPointerType cPointerReturnType = new CPointerType(false, false, elementType);
+    CPointerType cPointerReturnType = new CPointerType(CTypeQualifiers.NONE, elementType);
     // The inner return type needs to be a nested ** type, since it adds 1 pointer itself we need 1
     // extra
     CPointerExpression inner = arrayPointerAccess(variableName, cPointerReturnType, innerIndiceInt);
@@ -3736,7 +3743,7 @@ public class SMGCPAValueVisitorTest {
             FileLocation.DUMMY, INT_TYPE, BigInteger.valueOf(Math.abs(outerindiceInt)));
 
     // The type for the returned value after the binary expr
-    CPointerType cPointerBinaryOperType = new CPointerType(false, false, elementType);
+    CPointerType cPointerBinaryOperType = new CPointerType(CTypeQualifiers.NONE, elementType);
 
     if (outerindiceInt == 0) {
       // *inner
@@ -3779,12 +3786,13 @@ public class SMGCPAValueVisitorTest {
             FileLocation.DUMMY, INT_TYPE, BigInteger.valueOf(Math.abs(indiceInt)));
 
     // The type for the returned value after the first deref type*
-    CPointerType cPointerReturnType = new CPointerType(false, false, elementType);
+    CPointerType cPointerReturnType = new CPointerType(CTypeQualifiers.NONE, elementType);
     // outermost type; type**
-    CPointerType cPointerPointerReturnType = new CPointerType(false, false, cPointerReturnType);
+    CPointerType cPointerPointerReturnType =
+        new CPointerType(CTypeQualifiers.NONE, cPointerReturnType);
     // The type for the returned value after the binary expr
     // TODO: why the f does this change?
-    CPointerType cPointerBinaryOperType = new CPointerType(false, false, elementType);
+    CPointerType cPointerBinaryOperType = new CPointerType(CTypeQualifiers.NONE, elementType);
 
     // initializer = null because we model values/memory using the SMG!
     CVariableDeclaration declararation =
@@ -3844,9 +3852,9 @@ public class SMGCPAValueVisitorTest {
       CType indexVariableType,
       CType elementType) {
     // The type for the returned value after the pointer
-    CPointerType cPointerReturnType = new CPointerType(false, false, elementType);
+    CPointerType cPointerReturnType = new CPointerType(CTypeQualifiers.NONE, elementType);
     // The type for the returned value after the binary expr
-    CPointerType cPointerBinaryOperType = new CPointerType(false, false, INT_TYPE);
+    CPointerType cPointerBinaryOperType = new CPointerType(CTypeQualifiers.NONE, INT_TYPE);
 
     return buildCPointerExpressionFromBinary(
         cPointerReturnType,
@@ -3866,9 +3874,9 @@ public class SMGCPAValueVisitorTest {
       CType indexVariableType,
       CType elementType) {
     // The type for the returned value after the pointer
-    CPointerType cPointerReturnType = new CPointerType(false, false, elementType);
+    CPointerType cPointerReturnType = new CPointerType(CTypeQualifiers.NONE, elementType);
     // The type for the returned value after the binary expr
-    CPointerType cPointerBinaryOperType = new CPointerType(false, false, INT_TYPE);
+    CPointerType cPointerBinaryOperType = new CPointerType(CTypeQualifiers.NONE, INT_TYPE);
 
     return buildCPointerExpressionFromBinary(
         cPointerReturnType,
@@ -3888,9 +3896,9 @@ public class SMGCPAValueVisitorTest {
       CType indexVariableType,
       CType elementType) {
     // The type for the returned value after the pointer
-    CPointerType cPointerReturnType = new CPointerType(false, false, elementType);
+    CPointerType cPointerReturnType = new CPointerType(CTypeQualifiers.NONE, elementType);
     // The type for the returned value after the binary expr
-    CPointerType cPointerBinaryOperType = new CPointerType(false, false, INT_TYPE);
+    CPointerType cPointerBinaryOperType = new CPointerType(CTypeQualifiers.NONE, INT_TYPE);
 
     return buildCPointerExpressionFromBinary(
         cPointerReturnType,
@@ -3907,9 +3915,9 @@ public class SMGCPAValueVisitorTest {
   public CBinaryExpression arrayPointerMinusArrayPointer(
       String leftArrayVariableName, String rightArrayVariableName, CType arrayType) {
     // The type for the returned value after the pointer
-    CPointerType cPointerReturnType = new CPointerType(false, false, arrayType);
+    CPointerType cPointerReturnType = new CPointerType(CTypeQualifiers.NONE, arrayType);
     // The type for the returned value after the binary expr
-    CPointerType cPointerBinaryOperType = new CPointerType(false, false, INT_TYPE);
+    CPointerType cPointerBinaryOperType = new CPointerType(CTypeQualifiers.NONE, INT_TYPE);
 
     // In this case the operation and binary type are always equal!
     return new CBinaryExpression(
@@ -3969,8 +3977,8 @@ public class SMGCPAValueVisitorTest {
     assertThat(valueToCheck).isInstanceOf(expected.getClass());
     if (valueType instanceof CSimpleType) {
       assertThat(valueToCheck).isInstanceOf(NumericValue.class);
-      assertThat(valueToCheck.asNumericValue().bigIntegerValue())
-          .isEqualTo(expected.asNumericValue().bigIntegerValue());
+      assertThat(((NumericValue) valueToCheck).bigIntegerValue())
+          .isEqualTo(((NumericValue) expected).bigIntegerValue());
     } else {
       // may be some other type, arrays, structs etc.
       // TODO:
@@ -3987,8 +3995,8 @@ public class SMGCPAValueVisitorTest {
    * @return some Value for the type and input value.
    */
   private @Nullable Value transformInputIntoValue(CType valueType, int numValue) {
-    if (valueType instanceof CSimpleType) {
-      if (((CSimpleType) valueType).hasSignedSpecifier()) {
+    if (valueType instanceof CSimpleType cSimpleType) {
+      if (cSimpleType.hasSignedSpecifier()) {
         // Make every second number negative
         return new NumericValue(numValue % 2 == 0 ? numValue : -numValue);
       } else {
